@@ -50,8 +50,9 @@ import com.ebicep.warlords.pve.quests.QuestCommand;
 import com.ebicep.warlords.pve.weapons.WeaponCommand;
 import com.ebicep.warlords.util.chat.ChatChannels;
 import com.ebicep.warlords.util.java.Pair;
+import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.format.NamedTextColor;
 import org.bukkit.Bukkit;
-import org.bukkit.ChatColor;
 import org.bukkit.OfflinePlayer;
 import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
@@ -131,9 +132,9 @@ public class CommandManager {
                                                                       .map(WarlordsPlayer.class::cast)
                                                                       .filter(warlordsPlayer -> warlordsPlayer.getName().equalsIgnoreCase(target))
                                                                       .findAny();
-            if (!optionalWarlordsPlayer.isPresent()) {
+            if (optionalWarlordsPlayer.isEmpty()) {
                 if (target.equals(name)) {
-                    throw new ConditionFailedException(ChatColor.RED + "You must be in an active game to use this command!");
+                    throw new ConditionFailedException("You must be in an active game to use this command!");
                 } else {
                     throw new InvalidCommandArgument("Could not find WarlordsPlayer with name " + target);
                 }
@@ -146,24 +147,24 @@ public class CommandManager {
             Pair<Party, PartyPlayer> partyPlayerPair = PartyManager.getPartyAndPartyPlayerFromAny(player.getUniqueId());
             if (partyPlayerPair != null) {
                 if (command.hasFlag("leader") && partyPlayerPair.getB().getPartyPlayerType() != PartyPlayerType.LEADER) {
-                    Party.sendPartyMessage(player, ChatColor.RED + "Insufficient Permissions!");
+                    Party.sendPartyMessage(player, Component.text("Insufficient Permissions!", NamedTextColor.RED));
                     throw new ConditionFailedException();
                 }
                 return new PartyPlayerWrapper(partyPlayerPair);
             }
-            throw new ConditionFailedException(ChatColor.RED + "You must be in a party to use this command!");
+            throw new ConditionFailedException("You must be in a party to use this command!");
         });
         manager.getCommandContexts().registerIssuerOnlyContext(GuildPlayerWrapper.class, command -> {
             Player player = command.getPlayer();
             Pair<Guild, GuildPlayer> guildPlayerPair = GuildManager.getGuildAndGuildPlayerFromPlayer(player);
             if (guildPlayerPair != null) {
                 if (command.hasFlag("master") && !guildPlayerPair.getA().getCurrentMaster().equals(player.getUniqueId())) {
-                    Guild.sendGuildMessage(player, ChatColor.RED + "Insufficient Permissions!");
+                    Guild.sendGuildMessage(player, Component.text("Insufficient Permissions!", NamedTextColor.RED));
                     throw new ConditionFailedException();
                 }
                 return new GuildPlayerWrapper(guildPlayerPair);
             }
-            throw new ConditionFailedException(ChatColor.RED + "You must be in a guild to use this command!");
+            throw new ConditionFailedException("You must be in a guild to use this command!");
         });
         //Contexts
         manager.getCommandContexts().registerContext(WarlordsNPC.class, command -> {
@@ -205,7 +206,7 @@ public class CommandManager {
             String arg = command.popFirstArg();
             Pair<Party, PartyPlayer> partyPlayerPair = PartyManager.getPartyAndPartyPlayerFromAny(command.getPlayer().getUniqueId());
             if (partyPlayerPair == null) {
-                throw new ConditionFailedException(ChatColor.RED + "You must be in a party to use this command!");
+                throw new ConditionFailedException("You must be in a party to use this command!");
             }
             for (PartyPlayer partyPlayer : partyPlayerPair.getA().getPartyPlayers()) {
                 if (Bukkit.getOfflinePlayer(partyPlayer.getUUID()).getName().equalsIgnoreCase(arg)) {
@@ -218,7 +219,7 @@ public class CommandManager {
             String arg = command.popFirstArg();
             Pair<Guild, GuildPlayer> guildPlayerPair = GuildManager.getGuildAndGuildPlayerFromPlayer(command.getPlayer());
             if (guildPlayerPair == null) {
-                throw new ConditionFailedException(ChatColor.RED + "You must be in a guild to use this command!");
+                throw new ConditionFailedException("You must be in a guild to use this command!");
             }
             for (GuildPlayer guildPlayer : guildPlayerPair.getA().getPlayers()) {
                 if (Bukkit.getOfflinePlayer(guildPlayer.getUUID()).getName().equalsIgnoreCase(arg)) {
@@ -229,11 +230,11 @@ public class CommandManager {
         });
         manager.getCommandContexts().registerContext(AbstractPoll.class, command -> {
             Optional<AbstractPoll<?>> optionalPoll = AbstractPoll.getPoll(command.popFirstArg());
-            if (!optionalPoll.isPresent()) {
-                throw new InvalidCommandArgument(ChatColor.RED + "Could not find a poll with that ID");
+            if (optionalPoll.isEmpty()) {
+                throw new InvalidCommandArgument("Could not find a poll with that ID");
             }
             if (!optionalPoll.get().getUUIDsAllowedToVote().contains(command.getPlayer().getUniqueId())) {
-                throw new ConditionFailedException(ChatColor.RED + "You can't vote in this poll!");
+                throw new ConditionFailedException("You can't vote in this poll!");
             }
             return optionalPoll.get();
         });
@@ -249,22 +250,28 @@ public class CommandManager {
             if (game.isPresent()) {
                 return game.get();
             } else {
-                throw new InvalidCommandArgument(ChatColor.RED + "Could not find a game with that ID");
+                throw new InvalidCommandArgument("Could not find a game with that ID");
             }
         });
         manager.getCommandContexts().registerContext(Instant.class, command -> Instant.parse(command.popFirstArg()));
         manager.getCommandContexts().registerContext(Year.class, command -> Year.parse(command.popFirstArg()));
+        manager.getCommandContexts().registerContext(NamedTextColor.class, command -> {
+            NamedTextColor namedTextColor = NamedTextColor.NAMES.value(command.popFirstArg().toLowerCase());
+            if (namedTextColor == null) {
+                throw new InvalidCommandArgument("Could not find a color with that name");
+            }
+            return namedTextColor;
+        });
     }
 
     public static void registerCompletions() {
         CommandCompletions<BukkitCommandCompletionContext> commandCompletions = manager.getCommandCompletions();
         commandCompletions.registerAsyncCompletion("warlordsplayerssamegame", command -> {
             CommandSender sender = command.getSender();
-            if (sender instanceof Player) {
-                Player player = (Player) sender;
+            if (sender instanceof Player player) {
                 WarlordsEntity warlordsEntity = Warlords.getPlayer(player);
                 if (warlordsEntity != null) {
-                    return warlordsEntity.getGame().warlordsPlayers().map(WarlordsEntity::getName).collect(Collectors.toList());
+                    return warlordsEntity.getGame().warlordsPlayers().map(WarlordsEntity::getName).toList();
                 }
             }
             return null;
@@ -275,7 +282,7 @@ public class CommandManager {
                         .filter(WarlordsPlayer.class::isInstance)
                         .map(WarlordsPlayer.class::cast)
                         .map(WarlordsPlayer::getName)
-                        .collect(Collectors.toList())
+                        .toList()
         );
         commandCompletions.registerAsyncCompletion("warlordsnpcs", command ->
                 Warlords.getPlayers().values()
@@ -294,7 +301,7 @@ public class CommandManager {
                         .map(Map::keySet)
                         .flatMap(Collection::stream)
                         .map(uuid -> Bukkit.getOfflinePlayer(uuid).getName())
-                        .collect(Collectors.toList())
+                        .toList()
 
         );
         commandCompletions.registerAsyncCompletion("enabledisable", command -> Arrays.asList("enable", "disable"));
@@ -302,11 +309,11 @@ public class CommandManager {
         commandCompletions.registerAsyncCompletion("maps", command ->
                 Arrays.stream(GameMap.VALUES)
                       .map(GameMap::name)
-                      .collect(Collectors.toList()));
+                      .toList());
         commandCompletions.registerAsyncCompletion("gamemodes", command ->
                 Arrays.stream(GameMode.VALUES)
                       .map(GameMode::name)
-                      .collect(Collectors.toList()));
+                      .toList());
         commandCompletions.registerAsyncCompletion("gameids", command ->
                 Warlords.getGameManager().getGames()
                         .stream()
@@ -314,21 +321,18 @@ public class CommandManager {
                         .filter(Objects::nonNull)
                         .map(Game::getGameId)
                         .map(String::valueOf)
-                        .collect(Collectors.toList())
+                        .toList()
         );
         commandCompletions.registerAsyncCompletion("gameteams",
-                command -> TeamMarker.getTeams(Warlords.getPlayer(command.getPlayer()).getGame()).stream().map(Team::getName).collect(Collectors.toList())
+                command -> TeamMarker.getTeams(Warlords.getPlayer(command.getPlayer()).getGame()).stream().map(Team::getName).toList()
         );
         commandCompletions.registerAsyncCompletion("playerabilitystats",
                 command -> GetPlayerLastAbilityStatsCommand.PLAYER_LAST_ABILITY_STATS.keySet()
                                                                                      .stream()
                                                                                      .map(uuid -> Bukkit.getOfflinePlayer(uuid).getName())
-                                                                                     .collect(Collectors.toList())
+                                                                                     .toList()
         );
         commandCompletions.registerAsyncCompletion("chatchannels", command -> Arrays.asList("a", "all", "p", "party", "g", "guild"));
-        commandCompletions.registerAsyncCompletion("partyleaders",
-                command -> PartyManager.PARTIES.stream().map(Party::getLeaderName).collect(Collectors.toList())
-        );
         commandCompletions.registerAsyncCompletion("partymembers", command -> {
             CommandSender sender = command.getSender();
             if (sender instanceof Player) {
@@ -338,7 +342,7 @@ public class CommandManager {
                                            .flatMap(Collection::stream)
                                            .map(PartyPlayer::getUUID)
                                            .map(uuid -> Bukkit.getOfflinePlayer(uuid).getName())
-                                           .collect(Collectors.toList());
+                                           .toList();
             }
             return null;
         });
@@ -351,7 +355,7 @@ public class CommandManager {
                                           .flatMap(Collection::stream)
                                           .map(GuildPlayer::getUUID)
                                           .map(uuid -> Bukkit.getOfflinePlayer(uuid).getName())
-                                          .collect(Collectors.toList());
+                                          .toList();
             }
             return null;
         });
@@ -360,48 +364,49 @@ public class CommandManager {
             if (sender instanceof Player) {
                 return GuildManager.GUILDS.stream()
                                           .map(Guild::getName)
-                                          .collect(Collectors.toList());
+                                          .toList();
             }
             return null;
         });
         commandCompletions.registerAsyncCompletion("pvemobs", command -> Arrays.stream(Mobs.values())
                                                                                .map(Mobs::name)
-                                                                               .collect(Collectors.toList()));
+                                                                               .toList());
         commandCompletions.registerAsyncCompletion("classesalias", command -> Classes.NAMES);
         commandCompletions.registerAsyncCompletion("specsalias", command -> Specializations.NAMES);
+        commandCompletions.registerAsyncCompletion("textcolors", command -> NamedTextColor.NAMES.keys());
 
     }
 
     public static void registerConditions() {
         manager.getCommandConditions().addCondition("database", command -> {
             if (!DatabaseManager.enabled) {
-                throw new ConditionFailedException(ChatColor.RED + "The database is currently disabled!");
+                throw new ConditionFailedException("The database is currently disabled!");
             }
             if (command.hasConfig("player") && DatabaseManager.playerService == null) {
-                throw new ConditionFailedException(ChatColor.RED + "Player database is currently disabled!");
+                throw new ConditionFailedException("Player database is currently disabled!");
             }
             if (command.hasConfig("game") && DatabaseManager.gameService == null) {
-                throw new ConditionFailedException(ChatColor.RED + "Games are currently disabled!");
+                throw new ConditionFailedException("Games are currently disabled!");
             }
             if (command.hasConfig("guild") && DatabaseManager.guildService == null) {
-                throw new ConditionFailedException(ChatColor.RED + "Guilds are current disabled!");
+                throw new ConditionFailedException("Guilds are current disabled!");
             }
         });
         manager.getCommandConditions().addCondition("bot", command -> {
             if (BotManager.jda == null) {
-                throw new ConditionFailedException(ChatColor.RED + "The bot is not enabled!");
+                throw new ConditionFailedException("The bot is not enabled!");
             }
         });
         manager.getCommandConditions().addCondition(Player.class, "requireWarlordsPlayer", (command, exec, player) -> requireWarlordsPlayer(player));
 
         manager.getCommandConditions().addCondition(Player.class, "requireGame", (command, exec, player) -> {
             Optional<Game> game = Warlords.getGameManager().getPlayerGame(player.getUniqueId());
-            if (!game.isPresent()) {
+            if (game.isEmpty()) {
                 BukkitCommandIssuer issuer = command.getIssuer();
                 if (issuer.isPlayer() && issuer.getPlayer().equals(player)) {
-                    throw new ConditionFailedException(ChatColor.RED + "You must be in an active game to use this command!");
+                    throw new ConditionFailedException("You must be in an active game to use this command!");
                 } else {
-                    throw new ConditionFailedException(ChatColor.RED + "Target player must be in an active game to use this command!");
+                    throw new ConditionFailedException("Target player must be in an active game to use this command!");
                 }
             }
             requireGameConfig(command, game.get());
@@ -409,7 +414,7 @@ public class CommandManager {
         manager.getCommandConditions().addCondition(WarlordsPlayer.class, "requireGame", (command, exec, warlordsPlayer) -> {
             Game game = warlordsPlayer.getGame();
             if (game == null) {
-                throw new ConditionFailedException(ChatColor.RED + "You must be in an active game to use this command!");
+                throw new ConditionFailedException("You must be in an active game to use this command!");
             }
             requireGameConfig(command, game);
         });
@@ -419,26 +424,26 @@ public class CommandManager {
 
         manager.getCommandConditions().addCondition(Player.class, "outsideGame", (command, exec, player) -> {
             if (Warlords.hasPlayer(player)) {
-                throw new ConditionFailedException(ChatColor.RED + "You cannot use this command while in an active game!");
+                throw new ConditionFailedException("You cannot use this command while in an active game!");
             }
         });
         manager.getCommandConditions().addCondition(Player.class, "party", (command, exec, player) -> {
             Pair<Party, PartyPlayer> optionalParty = PartyManager.getPartyAndPartyPlayerFromAny(player.getUniqueId());
             if (optionalParty == null && command.hasConfig("true")) {
-                throw new ConditionFailedException(ChatColor.RED + "You must be in a party to use this command!");
+                throw new ConditionFailedException("You must be in a party to use this command!");
             }
             if (optionalParty != null && command.hasConfig("false")) {
-                throw new ConditionFailedException(ChatColor.RED + "You cannot be in a party to use this command!");
+                throw new ConditionFailedException("You cannot be in a party to use this command!");
 
             }
         });
         manager.getCommandConditions().addCondition(Player.class, "guild", (command, exec, player) -> {
             Pair<Guild, GuildPlayer> guildPlayerPair = GuildManager.getGuildAndGuildPlayerFromPlayer(player);
             if (guildPlayerPair == null && command.hasConfig("true")) {
-                throw new ConditionFailedException(ChatColor.RED + "You must be in a guild to use this command!");
+                throw new ConditionFailedException("You must be in a guild to use this command!");
             }
             if (guildPlayerPair != null && command.hasConfig("false")) {
-                throw new ConditionFailedException(ChatColor.RED + "You cannot be in a guild to use this command!");
+                throw new ConditionFailedException("You cannot be in a guild to use this command!");
             }
         });
         manager.getCommandConditions().addCondition(Player.class, "otherChatChannel", (command, exec, player) -> {
@@ -446,7 +451,7 @@ public class CommandManager {
             if (command.hasConfig("target")) {
                 ChatChannels currentChatChannel = ChatChannels.valueOf(command.getConfigValue("target", ""));
                 if (selectedChatChannel == currentChatChannel) {
-                    throw new ConditionFailedException(ChatColor.RED + "You are already in this channel");
+                    throw new ConditionFailedException("You are already in this channel");
                 }
             }
         });
@@ -479,10 +484,10 @@ public class CommandManager {
             Player player = command.getIssuer().getPlayer();
             Pair<Party, PartyPlayer> partyPlayerPair = PartyManager.getPartyAndPartyPlayerFromAny(player.getUniqueId());
             if (partyPlayerPair == null) {
-                throw new ConditionFailedException(ChatColor.RED + "You must be in a party to use this command!");
+                throw new ConditionFailedException("You must be in a party to use this command!");
             }
             if (partyPlayerPair.getB().getPartyPlayerType().ordinal() >= partyPlayer.getPartyPlayerType().ordinal()) {
-                Party.sendPartyMessage(player, ChatColor.RED + "Insufficient Permissions!");
+                Party.sendPartyMessage(player, Component.text("Insufficient Permissions!", NamedTextColor.RED));
                 throw new ConditionFailedException();
             }
         });
@@ -490,11 +495,11 @@ public class CommandManager {
             Player player = command.getIssuer().getPlayer();
             Pair<Guild, GuildPlayer> guildPlayerPair = GuildManager.getGuildAndGuildPlayerFromPlayer(player);
             if (guildPlayerPair == null) {
-                throw new ConditionFailedException(ChatColor.RED + "You must be in a party to use this command!");
+                throw new ConditionFailedException("You must be in a party to use this command!");
             }
             Guild guild = guildPlayerPair.getA();
             if (guild.getRoleLevel(guildPlayerPair.getB()) >= guild.getRoleLevel(guildPlayer)) {
-                Guild.sendGuildMessage(player, ChatColor.RED + "Insufficient Permissions!");
+                Guild.sendGuildMessage(player, Component.text("Insufficient Permissions!", NamedTextColor.RED));
                 throw new ConditionFailedException();
             }
         });
@@ -502,13 +507,14 @@ public class CommandManager {
             Player player = command.getIssuer().getPlayer();
             GuildPermissions perm = GuildPermissions.valueOf(command.getConfigValue("perm", ""));
             if (!guildPlayerWrapper.getGuild().playerHasPermission(guildPlayerWrapper.getGuildPlayer(), perm)) {
-                Guild.sendGuildMessage(player, ChatColor.RED + "Insufficient Permissions!");
+                Guild.sendGuildMessage(player, Component.text("Insufficient Permissions!", NamedTextColor.RED));
                 throw new ConditionFailedException();
             }
         });
     }
 
     public static void registerCommands() {
+        manager.registerCommand(new GameDebugCommand());
         manager.registerCommand(new GameInfoCommand());
         manager.registerCommand(new GameKillCommand());
         manager.registerCommand(new GameListCommand());
@@ -599,7 +605,6 @@ public class CommandManager {
     @Nullable
     public static OnlinePlayer getOnlinePlayer(BukkitCommandIssuer issuer, String lookup, boolean allowMissing) throws InvalidCommandArgument {
         Player player = findPlayerSmart(issuer, lookup);
-        //noinspection Duplicates
         if (player == null) {
             if (allowMissing) {
                 return null;
@@ -612,7 +617,7 @@ public class CommandManager {
     public static void requireWarlordsPlayer(Player player) {
         WarlordsEntity issuerWarlordsPlayer = Warlords.getPlayer(player);
         if (issuerWarlordsPlayer == null) {
-            throw new ConditionFailedException(ChatColor.RED + "You must be in an active game to use this command!");
+            throw new ConditionFailedException("You must be in an active game to use this command!");
         }
     }
 
@@ -633,18 +638,18 @@ public class CommandManager {
                 }
             }
             if (!hasGameMode) {
-                throw new ConditionFailedException(ChatColor.RED + "Game does not contain gamemode " + configValue);
+                throw new ConditionFailedException("Game does not contain gamemode " + configValue);
             }
         }
         if (command.hasConfig("withAddon")) {
             GameAddon addon = GameAddon.valueOf(command.getConfigValue("withAddon", ""));
             if (!game.getAddons().contains(addon)) {
-                throw new ConditionFailedException(ChatColor.RED + "Game does not contain addon " + addon.name());
+                throw new ConditionFailedException("Game does not contain addon " + addon.name());
             }
         }
         if (command.hasConfig("unfrozen")) {
             if (game.isFrozen()) {
-                throw new ConditionFailedException(ChatColor.RED + "You cannot use this command while the game is frozen!");
+                throw new ConditionFailedException("You cannot use this command while the game is frozen!");
             }
         }
     }
@@ -674,16 +679,14 @@ public class CommandManager {
             return null;
         }
 
-        //noinspection Duplicates
         if (matches.isEmpty()) {
             Player player = ACFUtil.getFirstElement(confirmList);
             if (player == null) {
                 issuer.sendError(MinecraftMessageKeys.NO_PLAYER_FOUND_SERVER, "{search}", name);
-                return null;
             } else {
                 issuer.sendInfo(MinecraftMessageKeys.PLAYER_IS_VANISHED_CONFIRM, "{vanished}", player.getName());
-                return null;
             }
+            return null;
         }
 
         return matches.get(0);
@@ -691,7 +694,7 @@ public class CommandManager {
 
     public static void requirePlayer(BukkitCommandIssuer issuer) {
         if (!issuer.isPlayer()) {
-            throw new ConditionFailedException(ChatColor.RED + "This command requires a player!");
+            throw new ConditionFailedException("This command requires a player!");
         }
     }
 }
