@@ -12,10 +12,12 @@ import com.ebicep.warlords.game.Team;
 import com.ebicep.warlords.game.option.win.WinAfterTimeoutOption;
 import com.ebicep.warlords.player.ingame.WarlordsEntity;
 import com.ebicep.warlords.util.java.NumberFormat;
+import com.ebicep.warlords.util.java.StringUtils;
 import com.ebicep.warlords.util.warlords.PlayerFilter;
-import com.ebicep.warlords.util.warlords.Utils;
 import me.filoghost.holographicdisplays.api.HolographicDisplaysAPI;
 import me.filoghost.holographicdisplays.api.hologram.Hologram;
+import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.format.NamedTextColor;
 import org.bukkit.ChatColor;
 import org.springframework.data.annotation.Transient;
 import org.springframework.data.mongodb.core.mapping.Document;
@@ -215,11 +217,11 @@ public class DatabaseGameCTF extends DatabaseGameBase {
                 .values()
                 .stream()
                 .flatMap(Collection::stream)
-                .collect(Collectors.toList());
+                .toList();
         HashMap<DatabaseGamePlayerCTF, ChatColor> playerColor = new HashMap<>();
         for (Map.Entry<Team, List<DatabaseGamePlayerCTF>> teamListEntry : players.entrySet()) {
             for (DatabaseGamePlayerCTF gamePlayerCTF : teamListEntry.getValue()) {
-                playerColor.put(gamePlayerCTF, teamListEntry.getKey().teamColor);
+                playerColor.put(gamePlayerCTF, teamListEntry.getKey().oldTeamColor);
             }
         }
 
@@ -273,13 +275,19 @@ public class DatabaseGameCTF extends DatabaseGameBase {
     }
 
     @Override
-    public List<String> getExtraLore() {
+    public List<Component> getExtraLore() {
         return Arrays.asList(
-                ChatColor.GRAY + "Time Left: " + ChatColor.GREEN + Utils.formatTimeLeft(timeLeft),
-                ChatColor.GRAY + "Winner: " + winner.teamColor + winner.name,
-                ChatColor.GRAY + "Blue Points: " + ChatColor.BLUE + bluePoints,
-                ChatColor.GRAY + "Red Points: " + ChatColor.RED + redPoints,
-                ChatColor.GRAY + "Players: " + ChatColor.YELLOW + players.values().stream().mapToLong(Collection::size).sum()
+                Component.text("Time Left: ", NamedTextColor.GRAY)
+                         .append(Component.text(StringUtils.formatTimeLeft(timeLeft), NamedTextColor.GREEN)),
+                Component.text("Winner: ", NamedTextColor.GRAY)
+                         .append(Component.text(winner.name, winner.teamColor)),
+                Component.text("Blue Points: ", NamedTextColor.GRAY)
+                         .append(Component.text(bluePoints, NamedTextColor.BLUE)),
+                Component.text("Red Points: ", NamedTextColor.GRAY)
+                         .append(Component.text(redPoints, NamedTextColor.RED)),
+                Component.text("Players: ", NamedTextColor.GRAY)
+                         .append(Component.text(players.values().stream().mapToLong(Collection::size).sum(), NamedTextColor.YELLOW))
+
         );
     }
 
