@@ -14,8 +14,6 @@ import com.ebicep.warlords.game.option.pve.PveOption;
 import com.ebicep.warlords.game.option.pve.rewards.PlayerPveRewards;
 import com.ebicep.warlords.game.option.pve.wavedefense.WaveDefenseOption;
 import com.ebicep.warlords.game.option.pve.wavedefense.events.EventPointsOption;
-import com.ebicep.warlords.game.option.pve.wavedefense.events.modes.BoltaroBonanzaOption;
-import com.ebicep.warlords.game.option.pve.wavedefense.events.modes.BoltarosLairOption;
 import com.ebicep.warlords.guilds.Guild;
 import com.ebicep.warlords.guilds.GuildExperienceUtils;
 import com.ebicep.warlords.guilds.GuildManager;
@@ -32,15 +30,18 @@ import com.ebicep.warlords.pve.quests.Quests;
 import com.ebicep.warlords.pve.weapons.AbstractWeapon;
 import com.ebicep.warlords.pve.weapons.WeaponsPvE;
 import com.ebicep.warlords.pve.weapons.weaponaddons.WeaponScore;
-import com.ebicep.warlords.util.bukkit.ComponentBuilder;
-import com.ebicep.warlords.util.bukkit.PacketUtils;
 import com.ebicep.warlords.util.chat.ChatUtils;
 import com.ebicep.warlords.util.java.NumberFormat;
 import com.ebicep.warlords.util.java.Pair;
-import com.ebicep.warlords.util.warlords.Utils;
-import net.md_5.bungee.api.chat.BaseComponent;
+import com.ebicep.warlords.util.java.StringUtils;
+import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.TextComponent;
+import net.kyori.adventure.text.event.HoverEvent;
+import net.kyori.adventure.text.format.NamedTextColor;
+import net.kyori.adventure.text.format.TextDecoration;
+import net.kyori.adventure.title.Title;
+import net.kyori.adventure.util.Ticks;
 import org.bukkit.Bukkit;
-import org.bukkit.ChatColor;
 import org.bukkit.GameMode;
 import org.bukkit.entity.Player;
 
@@ -49,7 +50,6 @@ import javax.annotation.Nullable;
 import java.time.Instant;
 import java.util.*;
 import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.stream.Collectors;
 
 
 public class EndState implements State, TimerDebugAble {
@@ -73,7 +73,7 @@ public class EndState implements State, TimerDebugAble {
 
     @Override
     public void begin() {
-        ChatUtils.MessageTypes.GAME_DEBUG.sendMessage("Game " + game.getGameId() + " has ended");
+        ChatUtils.MessageType.GAME_DEBUG.sendMessage("Game " + game.getGameId() + " has ended");
         if (game.getGameMode() == com.ebicep.warlords.game.GameMode.TUTORIAL) {
             game.warlordsPlayers().forEach(warlordsPlayer -> {
                 DatabaseManager.updatePlayer(warlordsPlayer.getUuid(), databasePlayer -> {
@@ -89,37 +89,49 @@ public class EndState implements State, TimerDebugAble {
             option.onGameEnding(game);
         }
 
-        ChatUtils.MessageTypes.GAME_DEBUG.sendMessage("Game options onGameEnding done");
+        ChatUtils.MessageType.GAME_DEBUG.sendMessage("Game options onGameEnding done");
 
         boolean teamBlueWins = winEvent != null && winEvent.getDeclaredWinner() == Team.BLUE;
         boolean teamRedWins = winEvent != null && winEvent.getDeclaredWinner() == Team.RED;
-        List<WarlordsPlayer> players = game.warlordsPlayers().collect(Collectors.toList());
+        List<WarlordsPlayer> players = game.warlordsPlayers().toList();
         if (players.isEmpty()) {
             return;
         }
         sendGlobalMessage(game,
-                "" + ChatColor.GREEN + ChatColor.BOLD + "▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬",
+                Component.text("▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬", NamedTextColor.GREEN, TextDecoration.BOLD),
                 true
         );
-        sendGlobalMessage(game, "" + ChatColor.WHITE + ChatColor.BOLD + "  Warlords 2.0", true);
-        sendGlobalMessage(game, "", false);
+        sendGlobalMessage(game, Component.text("Warlords 2.0", NamedTextColor.WHITE, TextDecoration.BOLD), true);
+        sendGlobalMessage(game, Component.empty(), false);
         if (teamBlueWins) {
             if (com.ebicep.warlords.game.GameMode.isPvE(game.getGameMode())) {
-                sendGlobalMessage(game, ChatColor.YELLOW + "Winner" + ChatColor.GRAY + " - " + ChatColor.BLUE + "PLAYERS", true);
+                sendGlobalMessage(game, Component.text("Winner", NamedTextColor.YELLOW)
+                                                 .append(Component.text(" - ", NamedTextColor.GRAY))
+                                                 .append(Component.text("PLAYERS", NamedTextColor.BLUE)), true);
             } else {
-                sendGlobalMessage(game, ChatColor.YELLOW + "Winner" + ChatColor.GRAY + " - " + ChatColor.BLUE + "BLU", true);
+                sendGlobalMessage(game, Component.text("Winner", NamedTextColor.YELLOW)
+                                                 .append(Component.text(" - ", NamedTextColor.GRAY))
+                                                 .append(Component.text("BLU", NamedTextColor.BLUE)), true);
             }
         } else if (teamRedWins) {
             if (com.ebicep.warlords.game.GameMode.isPvE(game.getGameMode())) {
-                sendGlobalMessage(game, ChatColor.YELLOW + "Winner" + ChatColor.GRAY + " - " + ChatColor.RED + "MONSTERS", true);
+                sendGlobalMessage(game, Component.text("Winner", NamedTextColor.YELLOW)
+                                                 .append(Component.text(" - ", NamedTextColor.GRAY))
+                                                 .append(Component.text("MONSTERS", NamedTextColor.RED)), true);
             } else {
-                sendGlobalMessage(game, ChatColor.YELLOW + "Winner" + ChatColor.GRAY + " - " + ChatColor.RED + "RED", true);
+                sendGlobalMessage(game, Component.text("Winner", NamedTextColor.YELLOW)
+                                                 .append(Component.text(" - ", NamedTextColor.GRAY))
+                                                 .append(Component.text("RED", NamedTextColor.RED)), true);
             }
         } else {
             if (options.stream().anyMatch(EventGameEndOption.class::isInstance)) {
-                sendGlobalMessage(game, ChatColor.YELLOW + "Winner" + ChatColor.GRAY + " - " + ChatColor.LIGHT_PURPLE + "GAME END", true);
+                sendGlobalMessage(game, Component.text("Winner", NamedTextColor.YELLOW)
+                                                 .append(Component.text(" - ", NamedTextColor.GRAY))
+                                                 .append(Component.text("GAME END", NamedTextColor.LIGHT_PURPLE)), true);
             } else {
-                sendGlobalMessage(game, ChatColor.YELLOW + "Winner" + ChatColor.GRAY + " - " + ChatColor.LIGHT_PURPLE + "DRAW", true);
+                sendGlobalMessage(game, Component.text("Winner", NamedTextColor.YELLOW)
+                                                 .append(Component.text(" - ", NamedTextColor.GRAY))
+                                                 .append(Component.text("DRAW", NamedTextColor.LIGHT_PURPLE)), true);
             }
         }
 
@@ -145,13 +157,13 @@ public class EndState implements State, TimerDebugAble {
                 showTopHealing(players);
                 break;
             default:
-                sendGlobalMessage(game, "", false);
+                sendGlobalMessage(game, Component.empty(), false);
                 break;
         }
 
         //PLAYER STATS
 
-        sendGlobalMessage(game, "", false);
+        sendGlobalMessage(game, Component.empty(), false);
         int totalKills = players
                 .stream()
                 .mapToInt(wp -> wp.getMinuteStats().total().getKills())
@@ -164,73 +176,73 @@ public class EndState implements State, TimerDebugAble {
             if (player == null) {
                 continue;
             }
-
-            ChatUtils.sendCenteredMessageWithEvents(player, new ComponentBuilder()
-                    .appendHoverText(ChatColor.GOLD.toString() + ChatColor.BOLD + "✚ YOUR STATISTICS ✚",
-                            ChatColor.WHITE + "Total Kills (everyone): " + ChatColor.GREEN + NumberFormat.addCommaAndRound(totalKills) + "\n" +
-                                    ChatColor.WHITE + "Total Assists (everyone): " + ChatColor.GREEN + NumberFormat.addCommaAndRound(totalAssists) + "\n" +
-                                    ChatColor.WHITE + "Total Deaths (everyone): " + ChatColor.GREEN + NumberFormat.addCommaAndRound(totalDeaths) + "\n" +
-                                    ChatColor.WHITE + "Total Melee Hits (you): " + ChatColor.GREEN + NumberFormat.addCommaAndRound(wp.getMinuteStats()
-                                                                                                                                     .total()
-                                                                                                                                     .getMeleeHits())
-                    )
-                    .create()
+            ChatUtils.sendCenteredMessage(player,
+                    Component.text("✚ YOUR STATISTICS ✚", NamedTextColor.GOLD, TextDecoration.BOLD)
+                             .hoverEvent(HoverEvent.showText(
+                                     Component.text("Total Kills (everyone): ", NamedTextColor.WHITE)
+                                              .append(Component.text(NumberFormat.addCommaAndRound(totalKills), NamedTextColor.GREEN))
+                                              .append(Component.newline())
+                                              .append(Component.text("Total Assists (everyone): ", NamedTextColor.WHITE))
+                                              .append(Component.text(NumberFormat.addCommaAndRound(totalAssists), NamedTextColor.GREEN))
+                                              .append(Component.newline())
+                                              .append(Component.text("Total Deaths (everyone): ", NamedTextColor.WHITE))
+                                              .append(Component.text(NumberFormat.addCommaAndRound(totalDeaths), NamedTextColor.GREEN))
+                                              .append(Component.newline())
+                                              .append(Component.text("Total Melee Hits (you): ", NamedTextColor.WHITE))
+                                              .append(Component.text(NumberFormat.addCommaAndRound(wp.getMinuteStats()
+                                                                                                     .total()
+                                                                                                     .getMeleeHits()),
+                                                      NamedTextColor.GREEN
+                                              ))))
             );
 
             boolean hoverable = !com.ebicep.warlords.game.GameMode.isPvE(game.getGameMode());
-            List<BaseComponent> baseComponents = new ArrayList<>(List.of(wp.getAllMinuteHoverableStats(MinuteStats.KILLS, hoverable)));
-            baseComponents.add(ChatUtils.SPACER);
-            baseComponents.addAll(List.of(wp.getAllMinuteHoverableStats(MinuteStats.ASSISTS, hoverable)));
-            baseComponents.add(ChatUtils.SPACER);
-            baseComponents.addAll(List.of(wp.getAllMinuteHoverableStats(MinuteStats.DEATHS, hoverable)));
-            ChatUtils.sendCenteredMessageWithEvents(player, baseComponents.toArray(new BaseComponent[0]));
+            ChatUtils.sendCenteredMessage(player,
+                    wp.getAllMinuteHoverableStats(MinuteStats.KILLS, hoverable)
+                      .append(ChatUtils.SPACER)
+                      .append(wp.getAllMinuteHoverableStats(MinuteStats.ASSISTS, hoverable))
+                      .append(ChatUtils.SPACER)
+                      .append(wp.getAllMinuteHoverableStats(MinuteStats.DEATHS, hoverable))
+            );
+            ChatUtils.sendCenteredMessage(player,
+                    wp.getAllMinuteHoverableStats(MinuteStats.DAMAGE, hoverable)
+                      .append(ChatUtils.SPACER)
+                      .append(wp.getAllMinuteHoverableStats(MinuteStats.HEALING, hoverable))
+                      .append(ChatUtils.SPACER)
+                      .append(wp.getAllMinuteHoverableStats(MinuteStats.ABSORBED, hoverable))
+            );
 
-            baseComponents.clear();
-            baseComponents.addAll(List.of(wp.getAllMinuteHoverableStats(MinuteStats.DAMAGE, hoverable)));
-            baseComponents.add(ChatUtils.SPACER);
-            baseComponents.addAll(List.of(wp.getAllMinuteHoverableStats(MinuteStats.HEALING, hoverable)));
-            baseComponents.add(ChatUtils.SPACER);
-            baseComponents.addAll(List.of(wp.getAllMinuteHoverableStats(MinuteStats.ABSORBED, hoverable)));
-            ChatUtils.sendCenteredMessageWithEvents(player, baseComponents.toArray(new BaseComponent[0]));
-
-            ChatUtils.sendMessage(player, false, "");
+            ChatUtils.sendCenteredMessage(player, Component.empty());
 
             //ABILITY INFO
-            List<BaseComponent> formattedData = new ArrayList<>();
-            List<BaseComponent[]> components = wp.getSpec().getFormattedData();
-            for (int i = 0; i < components.size() && i < 3; i++) {
-                formattedData.addAll(List.of(components.get(i)));
-                if (i < 2) {
-                    formattedData.add(ChatUtils.SPACER);
-                }
-            }
-            ChatUtils.sendCenteredMessageWithEvents(player, formattedData.toArray(new BaseComponent[0]));
-            formattedData.clear();
-            for (int i = 3; i < components.size(); i++) {
-                formattedData.addAll(List.of(components.get(i)));
-                if (i < 4) {
-                    formattedData.add(ChatUtils.SPACER);
-                }
-            }
-            ChatUtils.sendCenteredMessageWithEvents(player, formattedData.toArray(new BaseComponent[0]));
-            GetPlayerLastAbilityStatsCommand.PLAYER_LAST_ABILITY_STATS.put(player.getUniqueId(), components);
+            GetPlayerLastAbilityStatsCommand.PLAYER_LAST_ABILITY_STATS.put(player.getUniqueId(), wp.getSpec().getFormattedData());
+            GetPlayerLastAbilityStatsCommand.sendLastAbilityStats(player, player.getUniqueId());
 
             player.setGameMode(GameMode.ADVENTURE);
             player.setAllowFlight(true);
 
-            if (!game.getAddons().contains(GameAddon.IMPOSTER_MODE) &&
-                    options.stream().noneMatch(BoltaroBonanzaOption.class::isInstance) &&
-                    options.stream().noneMatch(BoltarosLairOption.class::isInstance)
-            ) {
+            if (!game.getAddons().contains(GameAddon.IMPOSTER_MODE) && options.stream().noneMatch(option -> option instanceof EventGameEndOption)) {
                 if (winEvent == null || winEvent.getDeclaredWinner() == null) {
                     player.playSound(player.getLocation(), "defeat", 500, 1);
-                    PacketUtils.sendTitle(player, "§d§lDRAW", "", 0, 100, 0);
+                    player.showTitle(Title.title(
+                            Component.text("DRAW", NamedTextColor.LIGHT_PURPLE, TextDecoration.BOLD),
+                            Component.empty(),
+                            Title.Times.times(Ticks.duration(0), Ticks.duration(100), Ticks.duration(0))
+                    ));
                 } else if (wp.getTeam() == winEvent.getDeclaredWinner()) {
                     player.playSound(player.getLocation(), "victory", 500, 1);
-                    PacketUtils.sendTitle(player, "§6§lVICTORY!", "", 0, 100, 0);
+                    player.showTitle(Title.title(
+                            Component.text("VICTORY", NamedTextColor.GOLD, TextDecoration.BOLD),
+                            Component.empty(),
+                            Title.Times.times(Ticks.duration(0), Ticks.duration(100), Ticks.duration(0))
+                    ));
                 } else {
                     player.playSound(player.getLocation(), "defeat", 500, 1);
-                    PacketUtils.sendTitle(player, "§c§lDEFEAT", "", 0, 100, 0);
+                    player.showTitle(Title.title(
+                            Component.text("DEFEAT", NamedTextColor.RED, TextDecoration.BOLD),
+                            Component.empty(),
+                            Title.Times.times(Ticks.duration(0), Ticks.duration(100), Ticks.duration(0))
+                    ));
                 }
             }
         }
@@ -238,37 +250,36 @@ public class EndState implements State, TimerDebugAble {
         this.resetTimer();
 
         //EXPERIENCE
-        System.out.println("Game Added = " + gameAdded);
+        ChatUtils.MessageType.WARLORDS.sendMessage("Game Added = " + gameAdded);
         if (gameAdded.get() && DatabaseManager.playerService != null) {
             sendGlobalMessage(game,
-                    "" + ChatColor.GREEN + ChatColor.BOLD + " ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬",
+                    Component.text(" ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬", NamedTextColor.GREEN, TextDecoration.BOLD),
                     true
             );
-            sendGlobalMessage(game, "", false);
+            sendGlobalMessage(game, Component.empty(), false);
             sendGlobalMessage(game,
-                    "" + ChatColor.GREEN + ChatColor.BOLD + " ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬",
+                    Component.text(" ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬", NamedTextColor.GREEN, TextDecoration.BOLD),
                     true
             );
-            sendGlobalMessage(game, "", false);
+            sendGlobalMessage(game, Component.empty(), false);
             showExperienceSummary(players);
             for (Option option : options) {
-                if (option instanceof PveOption) {
-                    PveOption pveOption = (PveOption) option;
+                if (option instanceof PveOption pveOption) {
                     showCoinSummary(pveOption, players);
                     showDropsSummary(pveOption, players);
                     showQuestSummary(pveOption, players);
                     break;
                 }
             }
-            sendGlobalMessage(game, "", false);
+            sendGlobalMessage(game, Component.empty(), false);
             sendGlobalMessage(game,
-                    "" + ChatColor.GREEN + ChatColor.BOLD + " ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬",
+                    Component.text(" ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬", NamedTextColor.GREEN, TextDecoration.BOLD),
                     true
             );
             if (game.getGameMode() == com.ebicep.warlords.game.GameMode.EVENT_WAVE_DEFENSE) {
-                sendGlobalMessage(game, "", false);
+                sendGlobalMessage(game, Component.empty(), false);
                 sendGlobalMessage(game,
-                        "" + ChatColor.GREEN + ChatColor.BOLD + " ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬",
+                        Component.text(" ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬", NamedTextColor.GREEN, TextDecoration.BOLD),
                         true
                 );
                 showEventStats(players);
@@ -276,7 +287,7 @@ public class EndState implements State, TimerDebugAble {
         }
 
         sendGlobalMessage(game,
-                "" + ChatColor.GREEN + ChatColor.BOLD + "▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬",
+                Component.text("▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬", NamedTextColor.GREEN, TextDecoration.BOLD),
                 true
         );
 
@@ -309,7 +320,7 @@ public class EndState implements State, TimerDebugAble {
         return 0;
     }
 
-    private void sendGlobalMessage(Game game, String message, boolean centered) {
+    private void sendGlobalMessage(Game game, Component message, boolean centered) {
         game.forEachOnlinePlayerWithoutSpectators((p, team) -> {
             if (centered) {
                 ChatUtils.sendCenteredMessage(p, message);
@@ -320,17 +331,13 @@ public class EndState implements State, TimerDebugAble {
     }
 
     private void showWaveDefenseStats(PveOption pveOption, List<WarlordsPlayer> players) {
-        sendGlobalMessage(game, "", false);
-        StringBuilder hover = new StringBuilder();
-        if (pveOption instanceof WaveDefenseOption) {
-            WaveDefenseOption waveDefenseOption = (WaveDefenseOption) pveOption;
-            hover.append(ChatColor.WHITE)
-                 .append("Waves Cleared")
-                 .append(ChatColor.GRAY)
-                 .append(": ")
-                 .append(ChatColor.GREEN)
-                 .append(waveDefenseOption.getWavesCleared())
-                 .append("\n");
+        sendGlobalMessage(game, Component.empty(), false);
+        TextComponent.Builder hover = Component.empty().toBuilder();
+        if (pveOption instanceof WaveDefenseOption waveDefenseOption) {
+            hover.append(Component.text("Waves Cleared", NamedTextColor.WHITE))
+                 .append(Component.text(": ", NamedTextColor.GRAY))
+                 .append(Component.text(waveDefenseOption.getWavesCleared(), NamedTextColor.GREEN))
+                 .append(Component.newline());
         }
         game.getOptions()
             .stream()
@@ -338,125 +345,133 @@ public class EndState implements State, TimerDebugAble {
             .map(RecordTimeElapsedOption.class::cast)
             .findAny()
             .ifPresent(recordTimeElapsedOption -> {
-                hover.append(ChatColor.WHITE).append("Time Elapsed").append(ChatColor.GRAY).append(": ")
-                     .append(ChatColor.GREEN).append(Utils.formatTimeLeft(recordTimeElapsedOption.getTicksElapsed() / 20));
+                hover.append(Component.text("Time Elapsed", NamedTextColor.WHITE))
+                     .append(Component.text(": ", NamedTextColor.GRAY))
+                     .append(Component.text(StringUtils.formatTimeLeft(recordTimeElapsedOption.getTicksElapsed() / 20), NamedTextColor.GREEN));
             });
-        sendGlobalEventMessage(game, new ComponentBuilder()
-                .appendHoverText(ChatColor.BLUE.toString() + ChatColor.BOLD + "✚ GAME STATS ✚", hover.toString())
-                .create()
-        );
+        sendGlobalEventMessage(game, Component.text("✚ GAME STATS ✚", NamedTextColor.BLUE, TextDecoration.BOLD)
+                                              .hoverEvent(HoverEvent.showText(hover.build())));
     }
 
     private void showTopDamage(List<WarlordsPlayer> players) {
-        sendGlobalMessage(game, "", false);
-        sendGlobalEventMessage(game, new ComponentBuilder()
-                .appendHoverText(ChatColor.RED.toString() + ChatColor.BOLD + "✚ TOP DAMAGE ✚",
-                        ChatColor.RED + "Total Damage (everyone)" +
-                                ChatColor.GRAY + ": " +
-                                ChatColor.GOLD + NumberFormat.addCommaAndRound(players.stream()
-                                                                                      .mapToLong(wp -> wp.getMinuteStats().total().getDamage())
-                                                                                      .sum())
-                )
-                .create()
+        sendGlobalMessage(game, Component.empty(), false);
+        sendGlobalEventMessage(game,
+                Component.text("✚ TOP DAMAGE ✚", NamedTextColor.RED, TextDecoration.BOLD)
+                         .hoverEvent(HoverEvent.showText(
+                                 Component.text("Total Damage (everyone)", NamedTextColor.RED)
+                                          .append(Component.text(": ", NamedTextColor.GRAY))
+                                          .append(Component.text(NumberFormat.addCommaAndRound(players.stream()
+                                                                                                      .mapToLong(wp -> wp.getMinuteStats().total().getDamage())
+                                                                                                      .sum()), NamedTextColor.GOLD))
+                         ))
         );
         players = players.stream()
                          .sorted(Comparator.comparing((WarlordsEntity wp) -> wp.getMinuteStats().total().getDamage()).reversed())
-                         .collect(Collectors.toList());
-        List<BaseComponent> leaderboardPlayersDamage = new ArrayList<>();
+                         .toList();
+        TextComponent.Builder leaderboardPlayersDamage = Component.empty().toBuilder();
         for (int i = 0; i < players.size() && i < 3; i++) {
             WarlordsEntity we = players.get(i);
-            leaderboardPlayersDamage.addAll(List.of(new ComponentBuilder()
-                    .appendHoverText(ChatColor.AQUA + we.getName() +
-                                    ChatColor.GRAY + ": " +
-                                    ChatColor.GOLD + NumberFormat.getSimplifiedNumber(we.getMinuteStats().total().getDamage()),
-                            ChatColor.DARK_GRAY + "Lv" +
-                                    ChatColor.GRAY + ExperienceManager.getLevelForSpec(we.getUuid(), we.getSpecClass()) + " " +
-                                    ChatColor.GOLD + we.getSpec().getClassName() +
-                                    ChatColor.GREEN + " (" +
-                                    we.getSpec().getClass().getSimpleName() +
-                                    ")"
-                    )
-                    .create()));
+            leaderboardPlayersDamage.append(
+                    Component.text(we.getName(), NamedTextColor.AQUA)
+                             .append(Component.text(": ", NamedTextColor.GRAY))
+                             .append(Component.text(NumberFormat.getSimplifiedNumber(we.getMinuteStats().total().getDamage()), NamedTextColor.GOLD))
+                             .hoverEvent(HoverEvent.showText(
+                                     Component.text("Lv", NamedTextColor.DARK_GRAY)
+                                              .append(Component.text(ExperienceManager.getLevelForSpec(we.getUuid(), we.getSpecClass()) + " ",
+                                                      NamedTextColor.GRAY
+                                              ))
+                                              .append(Component.text(we.getSpec().getClassName(), NamedTextColor.GOLD))
+                                              .append(Component.text(" (" + we.getSpec().getClass().getSimpleName() + ")",
+                                                      NamedTextColor.GREEN
+                                              ))
+
+                             )));
 
             if (i != players.size() - 1 && i != 2) {
-                leaderboardPlayersDamage.add(ChatUtils.SPACER);
+                leaderboardPlayersDamage.append(ChatUtils.SPACER);
             }
         }
-        sendGlobalEventMessage(game, leaderboardPlayersDamage.toArray(new BaseComponent[0]));
+        sendGlobalEventMessage(game, leaderboardPlayersDamage.build());
     }
 
     private void showTopHealing(List<WarlordsPlayer> players) {
-        sendGlobalMessage(game, "", false);
-        sendGlobalEventMessage(game, new ComponentBuilder()
-                .appendHoverText(ChatColor.GREEN.toString() + ChatColor.BOLD + "✚ TOP HEALING ✚",
-                        ChatColor.GREEN + "Total Healing (everyone)" +
-                                ChatColor.GRAY + ": " +
-                                ChatColor.GOLD + NumberFormat.addCommaAndRound(players.stream()
-                                                                                      .mapToLong(wp -> wp.getMinuteStats().total().getHealing())
-                                                                                      .sum())
-                )
-                .create()
+        sendGlobalMessage(game, Component.empty(), false);
+        sendGlobalEventMessage(game,
+                Component.text("✚ TOP HEALING ✚", NamedTextColor.GREEN, TextDecoration.BOLD)
+                         .hoverEvent(HoverEvent.showText(
+                                 Component.text("Total Healing (everyone)", NamedTextColor.GREEN)
+                                          .append(Component.text(": ", NamedTextColor.GRAY))
+                                          .append(Component.text(NumberFormat.addCommaAndRound(players.stream()
+                                                                                                      .mapToLong(wp -> wp.getMinuteStats().total().getHealing())
+                                                                                                      .sum()), NamedTextColor.GOLD))
+                         ))
         );
         players = players.stream()
                          .sorted(Comparator.comparing((WarlordsEntity wp) -> wp.getMinuteStats().total().getHealing()).reversed())
-                         .collect(Collectors.toList());
-        List<BaseComponent> leaderboardPlayersHealing = new ArrayList<>();
+                         .toList();
+        TextComponent.Builder leaderboardPlayersHealing = Component.empty().toBuilder();
         for (int i = 0; i < players.size() && i < 3; i++) {
             WarlordsEntity we = players.get(i);
-            leaderboardPlayersHealing.addAll(List.of(new ComponentBuilder()
-                    .appendHoverText(ChatColor.AQUA + we.getName() +
-                                    ChatColor.GRAY + ": " +
-                                    ChatColor.GOLD + NumberFormat.getSimplifiedNumber(we.getMinuteStats().total().getHealing()),
-                            ChatColor.DARK_GRAY + "Lv" +
-                                    ChatColor.GRAY + ExperienceManager.getLevelForSpec(we.getUuid(), we.getSpecClass()) + " " +
-                                    ChatColor.GOLD + we.getSpec().getClassName() +
-                                    ChatColor.GREEN + " (" +
-                                    we.getSpec().getClass().getSimpleName() +
-                                    ")"
-                    )
-                    .create()));
+            leaderboardPlayersHealing.append(
+                    Component.text(we.getName(), NamedTextColor.AQUA)
+                             .append(Component.text(": ", NamedTextColor.GRAY))
+                             .append(Component.text(NumberFormat.getSimplifiedNumber(we.getMinuteStats().total().getHealing()), NamedTextColor.GOLD))
+                             .hoverEvent(HoverEvent.showText(
+                                     Component.text("Lv", NamedTextColor.DARK_GRAY)
+                                              .append(Component.text(ExperienceManager.getLevelForSpec(we.getUuid(), we.getSpecClass()) + " ",
+                                                      NamedTextColor.GRAY
+                                              ))
+                                              .append(Component.text(we.getSpec().getClassName(), NamedTextColor.GOLD))
+                                              .append(Component.text(" (" + we.getSpec().getClass().getSimpleName() + ")",
+                                                      NamedTextColor.GREEN
+                                              ))
+                             )));
 
             if (i != players.size() - 1 && i != 2) {
-                leaderboardPlayersHealing.add(ChatUtils.SPACER);
+                leaderboardPlayersHealing.append(ChatUtils.SPACER);
             }
         }
-        sendGlobalEventMessage(game, leaderboardPlayersHealing.toArray(new BaseComponent[0]));
+        sendGlobalEventMessage(game, leaderboardPlayersHealing.build());
     }
 
     /**
      * @param players player collection to give the capture message module to.
      */
     private void showFlagCaptures(List<WarlordsPlayer> players) {
-        sendGlobalMessage(game, "", false);
-        sendGlobalEventMessage(game, new ComponentBuilder()
-                .appendHoverText(ChatColor.LIGHT_PURPLE.toString() + ChatColor.BOLD + "✚ MVP ✚",
-                        ChatColor.LIGHT_PURPLE + "Total Flag Captures (everyone): " +
-                                ChatColor.GOLD + NumberFormat.addCommaAndRound(players.stream()
-                                                                                      .mapToInt(WarlordsEntity::getFlagsCaptured)
-                                                                                      .sum()) +
-                                "\n" +
-                                ChatColor.LIGHT_PURPLE + "Total Flag Returns (everyone): " +
-                                ChatColor.GOLD + NumberFormat.addCommaAndRound(players.stream()
-                                                                                      .mapToInt(WarlordsEntity::getFlagsCaptured)
-                                                                                      .sum())
-                )
-                .create());
+        sendGlobalMessage(game, Component.empty(), false);
+        sendGlobalEventMessage(game,
+                Component.text("✚ MVP ✚", NamedTextColor.LIGHT_PURPLE, TextDecoration.BOLD)
+                         .hoverEvent(HoverEvent.showText(
+                                 Component.text("Total Flag Captures (everyone): ", NamedTextColor.LIGHT_PURPLE)
+                                          .append(Component.text(NumberFormat.addCommaAndRound(players.stream()
+                                                                                                      .mapToInt(WarlordsEntity::getFlagsCaptured)
+                                                                                                      .sum()), NamedTextColor.GOLD))
+                                          .append(Component.newline())
+                                          .append(Component.text("Total Flag Returns (everyone): ", NamedTextColor.LIGHT_PURPLE))
+                                          .append(Component.text(NumberFormat.addCommaAndRound(players.stream()
+                                                                                                      .mapToInt(WarlordsEntity::getFlagsReturned)
+                                                                                                      .sum()), NamedTextColor.GOLD))
+
+                         ))
+        );
         players = players.stream()
                          .sorted(Comparator.comparing(WarlordsEntity::getTotalCapsAndReturnsWeighted).reversed())
-                         .collect(Collectors.toList());
-        sendGlobalEventMessage(game, new ComponentBuilder()
-                .appendHoverText(ChatColor.AQUA + players.get(0).getName(),
-                        ChatColor.LIGHT_PURPLE + "Flag Captures: " +
-                                ChatColor.GOLD + players.get(0).getFlagsCaptured() +
-                                "\n" +
-                                ChatColor.LIGHT_PURPLE + "Flag Returns: " + ChatColor.GOLD + players.get(0).getFlagsReturned()
-                )
-                .create()
+                         .toList();
+        WarlordsPlayer topPlayer = players.get(0);
+        sendGlobalEventMessage(game,
+                Component.text(topPlayer.getName(), NamedTextColor.AQUA)
+                         .hoverEvent(HoverEvent.showText(
+                                 Component.text("Flag Captures: ", NamedTextColor.LIGHT_PURPLE)
+                                          .append(Component.text(topPlayer.getFlagsCaptured(), NamedTextColor.GOLD))
+                                          .append(Component.newline())
+                                          .append(Component.text("Flag Returns: ", NamedTextColor.LIGHT_PURPLE))
+                                          .append(Component.text(topPlayer.getFlagsReturned(), NamedTextColor.GOLD))
+                         ))
         );
     }
 
     private void showExperienceSummary(List<WarlordsPlayer> players) {
-        sendGlobalMessage(game, ChatColor.YELLOW.toString() + ChatColor.BOLD + "✚ EXPERIENCE SUMMARY ✚", true);
+        sendGlobalMessage(game, Component.text("✚ EXPERIENCE SUMMARY ✚", NamedTextColor.YELLOW, TextDecoration.BOLD), true);
         for (WarlordsPlayer wp : players) {
             Player player = Bukkit.getPlayer(wp.getUuid());
             if (player == null) {
@@ -468,100 +483,86 @@ public class EndState implements State, TimerDebugAble {
             long experienceEarnedSpec = ExperienceManager.getSpecExpFromSummary(expSummary);
             long experienceOnSpec = ExperienceManager.getExperienceForSpec(wp.getUuid(), wp.getSpecClass());
             long experienceUniversal = ExperienceManager.getUniversalLevel(wp.getUuid());
-            StringBuilder specExpSummary = new StringBuilder();
-            StringBuilder universalExpSummary = new StringBuilder();
-            expSummary.forEach((s, aLong) -> {
-                if (
-                        !s.equals("First Game of the Day") &&
-                                !s.equals("Second Game of the Day") &&
-                                !s.equals("Third Game of the Day")
+            TextComponent.Builder specExpSummary = Component.empty().toBuilder();
+            TextComponent.Builder universalExpSummary = Component.empty().toBuilder();
+            int counter = 0;
+            for (Map.Entry<String, Long> entry : expSummary.entrySet()) {
+                String key = entry.getKey();
+                Long value = entry.getValue();
+                if (!key.equals("First Game of the Day") &&
+                        !key.equals("Second Game of the Day") &&
+                        !key.equals("Third Game of the Day")
                 ) {
-                    specExpSummary.append(ChatColor.AQUA)
-                                  .append(s).append(ChatColor.WHITE)
-                                  .append(": ")
-                                  .append(ChatColor.DARK_GRAY)
-                                  .append("+")
-                                  .append(ChatColor.DARK_GREEN)
-                                  .append(aLong)
-                                  .append("\n");
+                    specExpSummary.append(Component.text(key, NamedTextColor.AQUA))
+                                  .append(Component.text(": ", NamedTextColor.WHITE))
+                                  .append(Component.text("+", NamedTextColor.DARK_GRAY))
+                                  .append(Component.text(value, NamedTextColor.DARK_GREEN));
+                    if (counter != expSummary.size() - 1) {
+                        specExpSummary.append(Component.newline());
+                    }
                 }
-
-                universalExpSummary.append(ChatColor.AQUA)
-                                   .append(s)
-                                   .append(ChatColor.WHITE)
-                                   .append(": ")
-                                   .append(ChatColor.DARK_GRAY)
-                                   .append("+")
-                                   .append(ChatColor.DARK_GREEN)
-                                   .append(aLong)
-                                   .append("\n");
-            });
-
-            specExpSummary.setLength(specExpSummary.length() - 1);
-            universalExpSummary.setLength(universalExpSummary.length() - 1);
-
-            ChatUtils.sendCenteredMessageWithEvents(player, new ComponentBuilder()
-                    .appendHoverText(
-                            ChatColor.GRAY + "+" +
-                                    ChatColor.DARK_GREEN + NumberFormat.addCommaAndRound(experienceEarnedSpec) + " " +
-                                    ChatColor.GOLD + wp.getSpec().getClassName() + " Experience " +
-                                    ChatColor.GRAY + "(" +
-                                    wp.getSpecClass().specType.chatColor + wp.getSpecClass().name +
-                                    ChatColor.GRAY + ")",
-                            specExpSummary.toString()
-                    )
-                    .create()
+                universalExpSummary.append(Component.text(key, NamedTextColor.AQUA))
+                                   .append(Component.text(": ", NamedTextColor.WHITE))
+                                   .append(Component.text("+", NamedTextColor.DARK_GRAY))
+                                   .append(Component.text(value, NamedTextColor.DARK_GREEN));
+                if (counter != expSummary.size() - 1) {
+                    universalExpSummary.append(Component.newline());
+                }
+                counter++;
+            }
+            ChatUtils.sendCenteredMessage(player,
+                    Component.text("+", NamedTextColor.GRAY)
+                             .append(Component.text(NumberFormat.addCommaAndRound(experienceEarnedSpec), NamedTextColor.DARK_GREEN))
+                             .append(Component.text(" " + wp.getSpec().getClassName() + " Experience", NamedTextColor.GOLD))
+                             .append(Component.text(" (", NamedTextColor.GRAY))
+                             .append(Component.text(wp.getSpecClass().name, wp.getSpecClass().specType.textColor))
+                             .append(Component.text(")", NamedTextColor.GRAY))
+                             .hoverEvent(HoverEvent.showText(specExpSummary.build()))
             );
 
             ExperienceManager.giveLevelUpMessage(player, experienceOnSpec - experienceEarnedSpec, experienceOnSpec);
-            ChatUtils.sendCenteredMessageWithEvents(player, new ComponentBuilder()
-                    .appendHoverText(
-                            ChatColor.GRAY + "+" +
-                                    ChatColor.DARK_AQUA + NumberFormat.addCommaAndRound(experienceEarnedUniversal) + " " +
-                                    ChatColor.GOLD + "Universal Experience ",
-                            universalExpSummary.toString()
-                    )
-                    .create()
+            ChatUtils.sendCenteredMessage(player,
+                    Component.text("+", NamedTextColor.DARK_GRAY)
+                             .append(Component.text(NumberFormat.addCommaAndRound(experienceEarnedUniversal), NamedTextColor.DARK_AQUA))
+                             .append(Component.text(" Universal Experience", NamedTextColor.GOLD))
+                             .hoverEvent(HoverEvent.showText(universalExpSummary.build()))
             );
 
             ExperienceManager.giveLevelUpMessage(player, experienceUniversal - experienceEarnedUniversal, experienceUniversal);
             ExperienceManager.CACHED_PLAYER_EXP_SUMMARY.remove(wp.getUuid());
 
-
             LinkedHashMap<String, Long> expFromPvE = GuildExperienceUtils.getExpFromPvE(wp, null, false);
             if (expFromPvE.size() > 0) {
-                StringBuilder expFromPvESummary = new StringBuilder();
-                expFromPvE.forEach((s, aLong) -> {
-                    expFromPvESummary.append(ChatColor.AQUA)
-                                     .append(s)
-                                     .append(ChatColor.WHITE)
-                                     .append(": ")
-                                     .append(ChatColor.DARK_GRAY)
-                                     .append("+")
-                                     .append(ChatColor.DARK_GREEN)
-                                     .append(aLong)
-                                     .append("\n");
-                });
-                expFromPvESummary.setLength(expFromPvESummary.length() - 1);
+                TextComponent.Builder expFromPvESummary = Component.empty().toBuilder();
+                counter = 0;
+                for (Map.Entry<String, Long> entry : expFromPvE.entrySet()) {
+                    String s = entry.getKey();
+                    Long aLong = entry.getValue();
+                    expFromPvESummary.append(Component.text(s, NamedTextColor.AQUA))
+                                     .append(Component.text(": ", NamedTextColor.WHITE))
+                                     .append(Component.text("+", NamedTextColor.DARK_GRAY))
+                                     .append(Component.text(aLong, NamedTextColor.DARK_GREEN));
+                    if (counter != expFromPvE.size() - 1) {
+                        expFromPvESummary.append(Component.newline());
+                    }
+                    counter++;
+                }
 
-                ChatUtils.sendCenteredMessageWithEvents(player, new ComponentBuilder()
-                        .appendHoverText(
-                                ChatColor.GRAY + "+" +
-                                        ChatColor.GREEN + NumberFormat.addCommaAndRound(expFromPvE.values()
-                                                                                                  .stream()
-                                                                                                  .mapToLong(Long::longValue)
-                                                                                                  .sum()) + " " +
-                                        ChatColor.DARK_GREEN + "Guild Experience", expFromPvESummary.toString()
-                        )
-                        .create()
+                ChatUtils.sendCenteredMessage(player,
+                        Component.text("+", NamedTextColor.DARK_GRAY)
+                                 .append(Component.text(NumberFormat.addCommaAndRound(expFromPvE.values().stream().mapToLong(Long::longValue).sum()),
+                                         NamedTextColor.GREEN
+                                 ))
+                                 .append(Component.text(" Guild Experience", NamedTextColor.DARK_GREEN))
+                                 .hoverEvent(HoverEvent.showText(expFromPvESummary.build()))
                 );
             }
         }
     }
 
     private void showCoinSummary(PveOption pveOption, List<WarlordsPlayer> players) {
-        sendGlobalMessage(game, "", false);
-        sendGlobalMessage(game, ChatColor.DARK_AQUA.toString() + ChatColor.BOLD + "✚ COINS SUMMARY ✚", true);
+        sendGlobalMessage(game, Component.empty(), false);
+        sendGlobalMessage(game, Component.text("✚ COINS SUMMARY ✚", NamedTextColor.DARK_AQUA, TextDecoration.BOLD), true);
 
         for (WarlordsPlayer wp : players) {
             Player player = Bukkit.getPlayer(wp.getUuid());
@@ -570,44 +571,41 @@ public class EndState implements State, TimerDebugAble {
             }
             Currencies.PvECoinSummary pvECoinSummary = Currencies.getCoinGainFromGameStats(wp, pveOption, false);
 
-            StringBuilder coinSummaryString = new StringBuilder();
-            pvECoinSummary.getCoinSummary().forEach((s, aLong) -> {
-                coinSummaryString.append(ChatColor.AQUA)
-                                 .append(s)
-                                 .append(ChatColor.WHITE)
-                                 .append(": ")
-                                 .append(ChatColor.DARK_GRAY)
-                                 .append("+")
-                                 .append(ChatColor.GOLD)
-                                 .append(aLong)
-                                 .append("\n");
-            });
-            coinSummaryString.setLength(coinSummaryString.length() - 1);
+            TextComponent.Builder coinSummaryString = Component.empty().toBuilder();
+            int counter = 0;
+            for (Map.Entry<String, Long> entry : pvECoinSummary.getCoinSummary().entrySet()) {
+                String s = entry.getKey();
+                Long aLong = entry.getValue();
+                coinSummaryString.append(Component.text(s, NamedTextColor.AQUA))
+                                 .append(Component.text(": ", NamedTextColor.WHITE))
+                                 .append(Component.text("+", NamedTextColor.DARK_GRAY))
+                                 .append(Component.text(aLong, NamedTextColor.GOLD));
+                if (counter != pvECoinSummary.getCoinSummary().size() - 1) {
+                    coinSummaryString.append(Component.newline());
+                }
+            }
 
-            ChatUtils.sendCenteredMessageWithEvents(player, new ComponentBuilder()
-                    .appendHoverText(
-                            ChatColor.GRAY + "+" +
-                                    ChatColor.YELLOW + NumberFormat.addCommaAndRound(pvECoinSummary.getTotalCoinsGained()) + " " +
-                                    ChatColor.GOLD + "Coins",
-                            coinSummaryString.toString()
-                    )
-                    .create()
+            ChatUtils.sendCenteredMessage(player,
+                    Component.text("+", NamedTextColor.GRAY)
+                             .append(Component.text(NumberFormat.addCommaAndRound(pvECoinSummary.getTotalCoinsGained()), NamedTextColor.YELLOW))
+                             .append(Component.text(" Coins", NamedTextColor.GOLD))
+                             .hoverEvent(HoverEvent.showText(coinSummaryString.build()))
             );
 
             Pair<Guild, GuildPlayer> guildGuildPlayerPair = GuildManager.getGuildAndGuildPlayerFromPlayer(player.getUniqueId());
             if (guildGuildPlayerPair != null) {
-                ChatUtils.sendMessage(player, true,
-                        ChatColor.GRAY + "+" +
-                                ChatColor.YELLOW + NumberFormat.addCommaAndRound(pvECoinSummary.getTotalGuildCoinsGained()) + " " +
-                                ChatColor.GOLD + "Guild Coins"
+                ChatUtils.sendCenteredMessage(player,
+                        Component.text("+", NamedTextColor.GRAY)
+                                 .append(Component.text(NumberFormat.addCommaAndRound(pvECoinSummary.getTotalGuildCoinsGained()), NamedTextColor.YELLOW))
+                                 .append(Component.text(" Guild Coins", NamedTextColor.GOLD))
                 );
             }
         }
     }
 
     private void showDropsSummary(PveOption pveOption, List<WarlordsPlayer> players) {
-        sendGlobalMessage(game, "", false);
-        sendGlobalMessage(game, ChatColor.LIGHT_PURPLE.toString() + ChatColor.BOLD + "✚ DROPS SUMMARY ✚", true);
+        sendGlobalMessage(game, Component.empty(), false);
+        sendGlobalMessage(game, Component.text("✚ DROPS SUMMARY ✚", NamedTextColor.LIGHT_PURPLE, TextDecoration.BOLD), true);
 
 
         for (WarlordsPlayer wp : players) {
@@ -620,15 +618,16 @@ public class EndState implements State, TimerDebugAble {
             long illusionShardGain = playerPveRewards.getIllusionShardGain();
             if (illusionShardGain > 0) {
                 gotAnyDrops = true;
-                ChatUtils.sendMessage(player,
-                        true,
-                        ChatColor.GRAY + "+" + ChatColor.GREEN + illusionShardGain + " " + Currencies.ILLUSION_SHARD.getColoredName() + (illusionShardGain == 1 ? "" : "s")
+                ChatUtils.sendCenteredMessage(player,
+                        Component.text("+", NamedTextColor.GRAY)
+                                 .append(Component.text(NumberFormat.addCommaAndRound(illusionShardGain) + " ", NamedTextColor.GREEN))
+                                 .append(Currencies.ILLUSION_SHARD.getColoredName().append(Component.text(illusionShardGain == 1 ? "" : "s")))
                 );
             }
             List<AbstractWeapon> weaponsFound = playerPveRewards.getWeaponsFound();
             if (!weaponsFound.isEmpty()) {
                 if (gotAnyDrops) {
-                    ChatUtils.sendMessage(player, true, "");
+                    ChatUtils.sendCenteredMessage(player, Component.empty());
                 }
                 gotAnyDrops = true;
                 LinkedHashMap<WeaponsPvE, List<AbstractWeapon>> weaponsFoundByType = new LinkedHashMap<>();
@@ -644,22 +643,27 @@ public class EndState implements State, TimerDebugAble {
                         int amountFound = weapons.size();
                         if (amountFound > 0) {
                             boolean autoSalvaged = weapons.stream().anyMatch(abstractWeapon -> !weaponInventory.contains(abstractWeapon));
-                            ChatUtils.sendCenteredMessageWithEvents(player, new ComponentBuilder()
-                                    .appendHoverText(rarity.chatColor.toString() + amountFound + " " + rarity.name + " Weapon" + (amountFound == 1 ? "" : "s") + (autoSalvaged ? ChatColor.WHITE + "*" : ""),
-                                            weapons.stream()
-                                                   .map(abstractWeapon -> {
-                                                       String output = abstractWeapon.getName();
-                                                       if (abstractWeapon instanceof WeaponScore) {
-                                                           output += ChatColor.YELLOW + " (" + NumberFormat.formatOptionalHundredths(((WeaponScore) abstractWeapon).getWeaponScore()) + ")";
-                                                       }
-                                                       if (!weaponInventory.contains(abstractWeapon)) {
-                                                           output += ChatColor.WHITE + " (Auto Salvaged)";
-                                                       }
-                                                       return output;
-                                                   })
-                                                   .collect(Collectors.joining("\n"))
-                                    )
-                                    .create()
+                            TextComponent.Builder weaponTypeSummary = Component.empty().toBuilder();
+                            for (int i = 0; i < weapons.size(); i++) {
+                                AbstractWeapon weapon = weapons.get(i);
+                                weaponTypeSummary.append(weapon.getName());
+                                if (weapon instanceof WeaponScore) {
+                                    weaponTypeSummary.append(Component.text(" (" + NumberFormat.formatOptionalHundredths(((WeaponScore) weapon).getWeaponScore()) + ")",
+                                            NamedTextColor.YELLOW
+                                    ));
+                                }
+                                if (!weaponInventory.contains(weapon)) {
+                                    weaponTypeSummary.append(Component.text(" (Auto Salvaged)", NamedTextColor.WHITE));
+                                }
+                                if (i != weapons.size() - 1) {
+                                    weaponTypeSummary.append(Component.newline());
+                                }
+                            }
+                            ChatUtils.sendCenteredMessage(player,
+                                    Component.text(amountFound + " ", rarity.textColor)
+                                             .append(Component.text(rarity.name + " Weapon" + (amountFound == 1 ? "" : "s")))
+                                             .append(Component.text(autoSalvaged ? "*" : "", NamedTextColor.WHITE))
+                                             .hoverEvent(HoverEvent.showText(weaponTypeSummary.build()))
                             );
                         }
                     });
@@ -668,46 +672,42 @@ public class EndState implements State, TimerDebugAble {
             long fragmentGain = playerPveRewards.getLegendFragmentGain();
             if (fragmentGain > 0) {
                 gotAnyDrops = true;
-                ChatUtils.sendMessage(player,
-                        true,
-                        ChatColor.GRAY + "+" + ChatColor.GREEN + fragmentGain + " " + Currencies.LEGEND_FRAGMENTS.getColoredName() + "s"
+                ChatUtils.sendCenteredMessage(player,
+                        Component.text("+", NamedTextColor.GRAY)
+                                 .append(Component.text(NumberFormat.addCommaAndRound(fragmentGain) + " ", NamedTextColor.GREEN))
+                                 .append(Currencies.LEGEND_FRAGMENTS.getColoredName().append(Component.text(fragmentGain == 1 ? "" : "s")))
                 );
             }
             HashMap<MobDrops, Long> mobDropsGained = playerPveRewards.getMobDropsGained();
             if (!mobDropsGained.isEmpty()) {
                 if (gotAnyDrops) {
-                    ChatUtils.sendMessage(player, true, "");
+                    ChatUtils.sendCenteredMessage(player, Component.empty());
                 }
                 gotAnyDrops = true;
                 List<MobDrops> mobDrops = new ArrayList<>(mobDropsGained.keySet());
                 mobDrops.sort(Comparator.comparingInt(MobDrops::ordinal));
                 for (MobDrops mobDrop : mobDrops) {
                     long amountFound = mobDropsGained.get(mobDrop);
-                    ChatUtils.sendMessage(player,
-                            true,
-                            mobDrop.getCostColoredName(amountFound)
-                    );
+                    ChatUtils.sendCenteredMessage(player, mobDrop.getCostColoredName(amountFound));
                 }
             }
             List<AbstractItem> itemsFound = playerPveRewards.getItemsFound();
             if (!itemsFound.isEmpty()) {
                 if (gotAnyDrops) {
-                    ChatUtils.sendMessage(player, true, "");
+                    ChatUtils.sendCenteredMessage(player, Component.empty());
                 }
                 gotAnyDrops = true;
                 for (AbstractItem item : itemsFound) {
-                    ChatUtils.sendCenteredMessageWithEvents(player, new ComponentBuilder()
-                            .appendHoverItem(item.getItemName(), item.generateItemStack())
-                            .create()
-                    );
+                    ChatUtils.sendCenteredMessage(player, item.getHoverComponent());
                 }
             }
             int blessingsFound = playerPveRewards.getBlessingsFound();
             if (blessingsFound > 0) {
                 gotAnyDrops = true;
-                ChatUtils.sendMessage(player,
-                        true,
-                        ChatColor.GRAY + "+" + ChatColor.GREEN + blessingsFound + ChatColor.GRAY + " Unknown Blessings"
+                ChatUtils.sendCenteredMessage(player,
+                        Component.text("+", NamedTextColor.GRAY)
+                                 .append(Component.text(NumberFormat.addCommaAndRound(blessingsFound), NamedTextColor.GREEN))
+                                 .append(Component.text(" Unknown Blessings", NamedTextColor.GRAY))
                 );
             }
 
@@ -715,39 +715,42 @@ public class EndState implements State, TimerDebugAble {
             Map<Spendable, Long> aspirantPouch = playerPveRewards.getAspirantPouch();
             if (!syntheticPouch.isEmpty() || !aspirantPouch.isEmpty()) {
                 if (gotAnyDrops) {
-                    ChatUtils.sendMessage(player, true, "");
+                    ChatUtils.sendCenteredMessage(player, Component.empty());
                 }
                 gotAnyDrops = true;
                 if (!syntheticPouch.isEmpty()) {
-                    ChatUtils.sendCenteredMessageWithEvents(player, new ComponentBuilder()
-                            .appendHoverText(ChatColor.AQUA + "Synthetic Pouch",
-                                    syntheticPouch.entrySet()
-                                                  .stream()
-                                                  .sorted((o1, o2) -> Long.compare(o2.getValue(), o1.getValue()))
-                                                  .map(entry -> ChatColor.GRAY + " - " + entry.getKey().getCostColoredName(entry.getValue()))
-                                                  .collect(Collectors.joining("\n"))
-                            )
-                            .create()
+                    ChatUtils.sendCenteredMessage(player,
+                            Component.text("Synthetic Pouch", NamedTextColor.AQUA)
+                                     .hoverEvent(HoverEvent.showText(getPouchSummary(syntheticPouch)))
                     );
                 }
                 if (!aspirantPouch.isEmpty()) {
-                    ChatUtils.sendCenteredMessageWithEvents(player, new ComponentBuilder()
-                            .appendHoverText(ChatColor.AQUA + "Aspirant Pouch",
-                                    aspirantPouch.entrySet()
-                                                 .stream()
-                                                 .sorted((o1, o2) -> Long.compare(o2.getValue(), o1.getValue()))
-                                                 .map(entry -> ChatColor.GRAY + " - " + entry.getKey().getCostColoredName(entry.getValue()))
-                                                 .collect(Collectors.joining("\n"))
-                            )
-                            .create()
+                    ChatUtils.sendCenteredMessage(player,
+                            Component.text("Aspirant Pouch", NamedTextColor.AQUA)
+                                     .hoverEvent(HoverEvent.showText(getPouchSummary(aspirantPouch)))
                     );
                 }
             }
 
             if (!gotAnyDrops) {
-                ChatUtils.sendMessage(player, true, ChatColor.GOLD + "You did not receive any drops this game!");
+                ChatUtils.sendCenteredMessage(player, Component.text("You did not receive any drops this game!", NamedTextColor.GOLD));
             }
         }
+    }
+
+    private static TextComponent getPouchSummary(Map<Spendable, Long> syntheticPouch) {
+        TextComponent.Builder pouch = Component.empty().toBuilder();
+        List<Map.Entry<Spendable, Long>> toSort = new ArrayList<>(syntheticPouch.entrySet());
+        toSort.sort((o1, o2) -> Long.compare(o2.getValue(), o1.getValue()));
+        for (int i = 0; i < toSort.size(); i++) {
+            Map.Entry<Spendable, Long> entry = toSort.get(i);
+            pouch.append(Component.text(" - ", NamedTextColor.GRAY)
+                                  .append(entry.getKey().getCostColoredName(entry.getValue())));
+            if (i != toSort.size() - 1) {
+                pouch.append(Component.newline());
+            }
+        }
+        return pouch.build();
     }
 
 
@@ -760,20 +763,20 @@ public class EndState implements State, TimerDebugAble {
             List<Quests> quests = Quests.getQuestsFromGameStats(wp, pveOption, false);
             if (!quests.isEmpty()) {
                 player.sendMessage("");
-                ChatUtils.sendCenteredMessage(player, ChatColor.AQUA.toString() + ChatColor.BOLD + "✚ QUESTS SUMMARY ✚");
+                ChatUtils.sendCenteredMessage(player, Component.text("✚ QUESTS SUMMARY ✚", NamedTextColor.AQUA, TextDecoration.BOLD));
             }
             for (Quests quest : quests) {
-                ChatUtils.sendCenteredMessageWithEvents(player, new ComponentBuilder()
-                        .appendHoverText(ChatColor.GREEN + quest.name, ChatColor.GREEN + quest.description)
-                        .create()
+                ChatUtils.sendCenteredMessage(player,
+                        Component.text(quest.name, NamedTextColor.GREEN)
+                                 .hoverEvent(HoverEvent.showText(Component.text(quest.description, NamedTextColor.GREEN)))
                 );
             }
         }
     }
 
     private void showEventStats(List<WarlordsPlayer> players) {
-        sendGlobalMessage(game, "", false);
-        sendGlobalMessage(game, ChatColor.AQUA.toString() + ChatColor.BOLD + "✚ EVENT SUMMARY ✚", true);
+        sendGlobalMessage(game, Component.empty(), false);
+        sendGlobalMessage(game, Component.text("✚ EVENT SUMMARY ✚", NamedTextColor.AQUA, TextDecoration.BOLD), true);
         EventPointsOption eventPointsOption = game
                 .getOptions()
                 .stream()
@@ -789,11 +792,10 @@ public class EndState implements State, TimerDebugAble {
 
             if (eventPointsOption != null) {
                 Integer points = eventPointsOption.getPoints().getOrDefault(player.getUniqueId(), 0);
-                ChatUtils.sendMessage(player,
-                        true,
-                        ChatColor.GRAY + "+" + ChatColor.YELLOW + NumberFormat.addCommas(Math.min(points,
-                                eventPointsOption.getCap()
-                        )) + " Point" + (points == 1 ? "" : "s")
+                String pointsFormatted = NumberFormat.addCommas(Math.min(points, eventPointsOption.getCap()));
+                ChatUtils.sendCenteredMessage(player,
+                        Component.text("+", NamedTextColor.GRAY)
+                                 .append(Component.text(pointsFormatted + " Points" + (points == 1 ? "" : "s"), NamedTextColor.YELLOW))
                 );
             }
 
@@ -801,13 +803,11 @@ public class EndState implements State, TimerDebugAble {
                 option.sendEventStatsMessage(game, player);
             }
         }
-        sendGlobalMessage(game, "", false);
+        sendGlobalMessage(game, Component.empty(), false);
     }
 
-    public void sendGlobalEventMessage(Game game, BaseComponent[] message) {
-        game.forEachOnlinePlayerWithoutSpectators((p, team) -> {
-            ChatUtils.sendCenteredMessageWithEvents(p, message);
-        });
+    public void sendGlobalEventMessage(Game game, Component component) {
+        game.forEachOnlinePlayerWithoutSpectators((p, team) -> ChatUtils.sendCenteredMessage(p, component));
     }
 
     @Override
