@@ -5,6 +5,7 @@ import com.ebicep.warlords.commands.debugcommands.game.GameStartCommand;
 import com.ebicep.warlords.game.*;
 import com.ebicep.warlords.game.option.Option;
 import com.ebicep.warlords.game.option.RecordTimeElapsedOption;
+import com.ebicep.warlords.game.option.RecordTimeElapsedOption;
 import com.ebicep.warlords.game.option.marker.TeamMarker;
 import com.ebicep.warlords.game.option.win.WinAfterTimeoutOption;
 import com.ebicep.warlords.game.state.TimerDebugAble;
@@ -13,19 +14,20 @@ import com.ebicep.warlords.player.ingame.WarlordsEntity;
 import com.ebicep.warlords.util.bukkit.HeadUtils;
 import com.ebicep.warlords.util.bukkit.ItemBuilder;
 import com.ebicep.warlords.util.bukkit.WordWrap;
-import com.ebicep.warlords.util.bukkit.signgui.SignGUI;
 import com.ebicep.warlords.util.warlords.Utils;
-import org.bukkit.ChatColor;
+import de.rapha149.signgui.SignGUI;
+import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.format.NamedTextColor;
+import net.kyori.adventure.text.format.TextDecoration;
+import net.kyori.adventure.text.serializer.plain.PlainTextComponentSerializer;
 import org.bukkit.Material;
 import org.bukkit.enchantments.Enchantment;
 import org.bukkit.entity.Player;
-import org.bukkit.inventory.ItemFlag;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.scheduler.BukkitRunnable;
 
 import java.util.EnumSet;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static com.ebicep.warlords.menu.Menu.*;
 import static com.ebicep.warlords.util.chat.ChatChannels.sendDebugMessage;
@@ -36,11 +38,11 @@ public class DebugMenuGameOptions {
     public static void openGameMenu(Player player) {
         Menu menu = new Menu("Game Options", 9 * 4);
         ItemStack[] itemStack = {
-                new ItemBuilder(Material.DARK_OAK_DOOR_ITEM)
-                        .name(ChatColor.GREEN + "Start")
+                new ItemBuilder(Material.DARK_OAK_DOOR)
+                        .name(Component.text("Start", NamedTextColor.GREEN))
                         .get(),
                 new ItemBuilder(Material.BOOK)
-                        .name(ChatColor.GREEN + "Games")
+                        .name(Component.text("Games", NamedTextColor.GREEN))
                         .get(),
         };
         for (int i = 0; i < itemStack.length; i++) {
@@ -48,12 +50,8 @@ public class DebugMenuGameOptions {
             menu.setItem(index, 1, itemStack[i],
                     (m, e) -> {
                         switch (index) {
-                            case 1:
-                                StartMenu.openGamemodeMenu(player);
-                                break;
-                            case 2:
-                                GamesMenu.openGameSelectorMenu(player);
-                                break;
+                            case 1 -> StartMenu.openGamemodeMenu(player);
+                            case 2 -> GamesMenu.openGameSelectorMenu(player);
                         }
                     }
             );
@@ -71,13 +69,13 @@ public class DebugMenuGameOptions {
             Menu menu = new Menu("Gamemode Picker", 9 * rows);
             int i = -1;
             for (GameMode gm : values) {
-                if (gm.isHiddenInMenu()) {
+                if (gm.isHiddenInMenu() && !player.isOp()) {
                     continue;
                 }
                 i++;
                 menu.setItem(i % 7 + 1, i / 7 + 1,
-                        new ItemBuilder(Material.WOOL, 1, (short) 15)
-                                .name(ChatColor.GOLD + ChatColor.BOLD.toString() + gm.getName())
+                        new ItemBuilder(Material.BLACK_WOOL)
+                                .name(Component.text(gm.getName(), NamedTextColor.GOLD, TextDecoration.BOLD))
                                 .get(),
                         (m, e) -> openMapMenu(player, gm)
                 );
@@ -102,7 +100,7 @@ public class DebugMenuGameOptions {
                 i++;
                 menu.setItem(i % 7 + 1, 1 + i / 7,
                         new ItemBuilder(Utils.getWoolFromIndex(i + 5))
-                                .name(ChatColor.GREEN + map.getMapName())
+                                .name(Component.text(map.getMapName(), NamedTextColor.GREEN))
                                 .get(),
                         (m, e) -> {
                             EnumSet<GameAddon> addons = EnumSet.noneOf(GameAddon.class);
@@ -133,11 +131,10 @@ public class DebugMenuGameOptions {
 
                 boolean isASelectedAddon = addons.contains(gameAddon);
                 ItemBuilder itemBuilder = new ItemBuilder(Utils.getWoolFromIndex(i + 5))
-                        .name(ChatColor.GREEN + gameAddon.getName())
-                        .lore(ChatColor.GOLD + WordWrap.wrapWithNewline(gameAddon.getDescription(), 150));
+                        .name(Component.text(gameAddon.getName(), NamedTextColor.GREEN))
+                        .lore(WordWrap.wrap(Component.text(gameAddon.getDescription(), NamedTextColor.GOLD), 150));
                 if (isASelectedAddon) {
                     itemBuilder.enchant(Enchantment.OXYGEN, 1);
-                    itemBuilder.flags(ItemFlag.HIDE_ENCHANTS);
                 }
 
                 menu.setItem(i % 7 + 1, 1 + i / 7,
@@ -146,15 +143,15 @@ public class DebugMenuGameOptions {
                             if (isASelectedAddon) {
                                 boolean customToggle = !player.hasPermission("warlords.game.customtoggle");
                                 if (customToggle && gameAddon.equals(GameAddon.CUSTOM_GAME)) {
-                                    player.sendMessage(ChatColor.RED + "Insufficient Permissions!");
+                                    player.sendMessage(Component.text("Insufficient Permissions!", NamedTextColor.RED));
                                 } else if (customToggle && gameAddon.equals(GameAddon.PRIVATE_GAME)) {
-                                    player.sendMessage(ChatColor.RED + "Insufficient Permissions!");
+                                    player.sendMessage(Component.text("Insufficient Permissions!", NamedTextColor.RED));
                                 } else {
                                     addons.remove(gameAddon);
                                 }
                             } else {
                                 if (!player.hasPermission("warlords.game.freezetoggle") && gameAddon.equals(GameAddon.FREEZE_GAME)) {
-                                    player.sendMessage(ChatColor.RED + "Insufficient Permissions!");
+                                    player.sendMessage(Component.text("Insufficient Permissions!", NamedTextColor.RED));
                                 } else {
                                     addons.add(gameAddon);
                                 }
@@ -167,8 +164,11 @@ public class DebugMenuGameOptions {
                 menu.setItem(3,
                         0,
                         new ItemBuilder(Material.DIAMOND_BLOCK)
-                                .name(ChatColor.GREEN + "Comps Preset")
-                                .lore(ChatColor.GOLD + "Select this to use the comps preset.\n- Private Game\n- Freeze Failsafe")
+                                .name(Component.text("Comps Preset", NamedTextColor.GREEN))
+                                .lore(Component.text("Select this to use the comps preset.", NamedTextColor.GOLD),
+                                        Component.text("- Private Game", NamedTextColor.GOLD),
+                                        Component.text("- Freeze Failsafe", NamedTextColor.GOLD)
+                                )
                                 .get(),
                         (m, e) -> GameStartCommand.startGameFromDebugMenu(player, false, queueEntryBuilder -> {
                             queueEntryBuilder
@@ -180,8 +180,12 @@ public class DebugMenuGameOptions {
                 menu.setItem(5,
                         0,
                         new ItemBuilder(Material.GOLD_BLOCK)
-                                .name(ChatColor.GREEN + "Tournament Preset")
-                                .lore(ChatColor.GOLD + "Select this to use the comps preset.\n- Private Game\n- Freeze Failsafe\n- Tournament Mode")
+                                .name(Component.text("Tournament Preset", NamedTextColor.GREEN))
+                                .lore(Component.text("Select this to use the comps preset.", NamedTextColor.GOLD),
+                                        Component.text("- Private Game", NamedTextColor.GOLD),
+                                        Component.text("- Freeze Failsafe", NamedTextColor.GOLD),
+                                        Component.text("- Tournament Mode", NamedTextColor.GOLD)
+                                )
                                 .get(),
                         (m, e) -> GameStartCommand.startGameFromDebugMenu(player, false, queueEntryBuilder -> {
                             queueEntryBuilder
@@ -194,7 +198,7 @@ public class DebugMenuGameOptions {
             }
             menu.setItem(3, menuHeight - 1, MENU_BACK, (m, e) -> openMapMenu(player, selectedGameMode));
             menu.setItem(4, menuHeight - 1, MENU_CLOSE, ACTION_CLOSE_MENU);
-            menu.setItem(5, menuHeight - 1, new ItemBuilder(Material.WOOL, 1, (short) 5).name(ChatColor.GREEN + "Start").get(), (m, e) -> {
+            menu.setItem(5, menuHeight - 1, new ItemBuilder(Material.LIME_WOOL).name(Component.text("Start", NamedTextColor.GREEN)).get(), (m, e) -> {
                 //safe guard
                 if (!player.isOp()) {
                     addons.remove(GameAddon.TOURNAMENT_MODE);
@@ -219,7 +223,7 @@ public class DebugMenuGameOptions {
             List<Game> games = Warlords.getGameManager().getGames().stream()
                                        .filter(gameHolder -> gameHolder.getGame() != null && gameHolder.getGame().acceptsSpectators())
                                        .map(GameManager.GameHolder::getGame)
-                                       .collect(Collectors.toList());
+                                       .toList();
 
             int rows = (games.size() - 1) / 7 + 4;
             Menu menu = new Menu("Game Selector", 9 * rows);
@@ -228,15 +232,15 @@ public class DebugMenuGameOptions {
             int y = 1;
             for (Game game : games) {
                 ItemBuilder itemBuilder = new ItemBuilder(Material.BOOK)
-                        .name(ChatColor.GREEN + "Game - " + game.getGameId())
-                        .lore(ChatColor.DARK_GRAY + "Map - " + ChatColor.RED + game.getMap().getMapName(),
-                                ChatColor.DARK_GRAY + "GameMode - " + ChatColor.RED + game.getGameMode(),
-                                ChatColor.DARK_GRAY + "Addons - " + ChatColor.RED + game.getAddons(),
-                                ChatColor.DARK_GRAY + "Players - " + ChatColor.RED + game.playersCount()
+                        .name(Component.text("Game - " + game.getGameId(), NamedTextColor.GREEN))
+                        .lore(
+                                Component.text("Map - ", NamedTextColor.DARK_GRAY).append(Component.text(game.getMap().getMapName(), NamedTextColor.RED)),
+                                Component.text("GameMode - ", NamedTextColor.DARK_GRAY).append(Component.text(game.getGameMode().name, NamedTextColor.RED)),
+                                Component.text("Addons - ", NamedTextColor.DARK_GRAY).append(Component.text(game.getAddons().toString(), NamedTextColor.RED)),
+                                Component.text("Players - ", NamedTextColor.DARK_GRAY).append(Component.text(String.valueOf(game.playersCount()), NamedTextColor.RED))
                         );
                 if (game.hasPlayer(player.getUniqueId())) {
                     itemBuilder.enchant(Enchantment.OXYGEN, 1);
-                    itemBuilder.flags(ItemFlag.HIDE_ENCHANTS);
                 }
                 menu.setItem(
                         x,
@@ -259,49 +263,49 @@ public class DebugMenuGameOptions {
         public static void openGameEditorMenu(Player player, Game game) {
             Menu menu = new Menu("Game Editor", 9 * 5);
             menu.setItem(1, 1,
-                    new ItemBuilder(Material.DIODE)
-                            .name(ChatColor.GREEN + "Timer")
+                    new ItemBuilder(Material.REPEATER)
+                            .name(Component.text("Timer", NamedTextColor.GREEN))
                             .get(),
                     (m, e) -> openTimerMenu(player, game)
             );
             menu.setItem(2, 1,
-                    new ItemBuilder(Material.SIGN)
-                            .name(ChatColor.GREEN + "Edit Team Scores")
+                    new ItemBuilder(Material.OAK_SIGN)
+                            .name(Component.text("Edit Team Scores", NamedTextColor.GREEN))
                             .get(),
                     (m, e) -> openTeamScoreEditorMenu(player, game)
             );
             menu.setItem(3, 1,
                     new ItemBuilder(Material.ICE)
-                            .name(ChatColor.GREEN + "Freeze Game")
+                            .name(Component.text("Freeze Game", NamedTextColor.GREEN))
                             .get(),
                     (m, e) -> {
                         if (game.isFrozen()) {
-                            game.removeFrozenCause("Debug");
+                            game.removeFrozenCause(Component.text("Debug"));
                         } else {
-                            game.addFrozenCause("Debug");
+                            game.addFrozenCause(Component.text("Debug"));
                         }
-                        sendDebugMessage(player, player.getName() + " froze game " + game.getGameId(), true);
+                        sendDebugMessage(player, player.getName() + " froze game " + game.getGameId());
                     }
             );
             WarlordsEntity warlordsPlayer = Warlords.getPlayer(player);
             if (warlordsPlayer != null && warlordsPlayer.getGame() == game) {
                 menu.setItem(1, 2,
                         new ItemBuilder(HeadUtils.getHead(player))
-                                .name(ChatColor.GREEN + "Player Options")
+                                .name(Component.text("Player Options", NamedTextColor.GREEN))
                                 .get(),
                         (m, e) -> DebugMenuPlayerOptions.openPlayerMenu(player, Warlords.getPlayer(player))
                 );
             }
             menu.setItem(2, 2,
                     new ItemBuilder(Material.NOTE_BLOCK)
-                            .name(ChatColor.GREEN + "Team Options")
+                            .name(Component.text("Team Options", NamedTextColor.GREEN))
                             .get(),
                     (m, e) -> {
                         DebugMenuTeamOptions.openTeamSelectorMenu(player, game);
                         new BukkitRunnable() {
                             @Override
                             public void run() {
-                                if (player.getOpenInventory().getTopInventory().getName().equals("Team Options")) {
+                                if (PlainTextComponentSerializer.plainText().serialize(player.getOpenInventory().title()).equals("Team Options")) {
                                     DebugMenuTeamOptions.openTeamSelectorMenu(player, game);
                                 } else {
                                     this.cancel();
@@ -321,42 +325,46 @@ public class DebugMenuGameOptions {
             Menu menu = new Menu("Timer", 9 * 4);
             menu.setItem(3, 1,
                     new ItemBuilder(Material.STONE_BUTTON)
-                            .name(ChatColor.GREEN + "Skip")
+                            .name(Component.text("Skip", NamedTextColor.GREEN))
                             .get(),
                     (m, e) -> {
                         timerDebugAble.skipTimer();
-                        sendDebugMessage(player, ChatColor.GREEN + "Skip timer of game " + game.getGameId(), true);
+                        sendDebugMessage(player, Component.text("Skip timer of game " + game.getGameId(), NamedTextColor.GREEN));
                     }
             );
             menu.setItem(5, 1,
-                    new ItemBuilder(Material.WATCH)
-                            .name(ChatColor.GREEN + "Set")
+                    new ItemBuilder(Material.CLOCK)
+                            .name(Component.text("Set", NamedTextColor.GREEN))
                             .get(),
                     (m, e) -> {
                         for (Option option : game.getOptions()) {
                             if (option instanceof WinAfterTimeoutOption || option instanceof RecordTimeElapsedOption) {
-                                SignGUI.open(player, new String[]{"", "^^^^^^^", "Enter new Time Left", "XX:XX"}, (p, lines) -> {
-                                    String time = lines[0];
-                                    try {
-                                        if (!time.contains(":")) {
-                                            throw new Exception();
-                                        }
-                                        int minutes = Integer.parseInt(time.split(":")[0]);
-                                        int seconds = Integer.parseInt(time.split(":")[1]);
-                                        if (minutes < 0 || seconds < 0) {
-                                            throw new Exception();
-                                        }
-                                        if (option instanceof WinAfterTimeoutOption) {
-                                            ((WinAfterTimeoutOption) option).setTimeRemaining(minutes * 60 + seconds);
-                                        } else {
-                                            ((RecordTimeElapsedOption) option).setTicksElapsed((minutes * 60 + seconds) * 20);
-                                        }
-                                        sendDebugMessage(player, ChatColor.GREEN + "Set timer of game " + game.getGameId() + " to " + time, true);
-                                    } catch (Exception exception) {
-                                        p.sendMessage(ChatColor.RED + "Invalid time");
-                                    }
-                                    openTimerMenu(player, game);
-                                });
+                                new SignGUI()
+                                        .lines("", "^^^^^^^", "Enter new Time Left", "XX:XX")
+                                        .onFinish((p, lines) -> {
+                                            new BukkitRunnable() {
+                                                @Override
+                                                public void run() {
+                                                    String time = lines[0];
+                                                    try {
+                                                        if (!time.contains(":")) {
+                                                            throw new Exception();
+                                                        }
+                                                        int minutes = Integer.parseInt(time.split(":")[0]);
+                                                        int seconds = Integer.parseInt(time.split(":")[1]);
+                                                        if (minutes < 0 || seconds < 0) {
+                                                            throw new Exception();
+                                                        }
+                                                        ((WinAfterTimeoutOption) option).setTimeRemaining(minutes * 60 + seconds);
+                                                        sendDebugMessage(player, Component.text("Set timer of game " + game.getGameId() + " to " + time, NamedTextColor.GREEN));
+                                                    } catch (Exception exception) {
+                                                        p.sendMessage(Component.text("Invalid time", NamedTextColor.RED));
+                                                    }
+                                                    openTimerMenu(player, game);
+                                                }
+                                            }.runTaskLater(Warlords.getInstance(), 1);
+                                            return null;
+                                        }).open(player);
                                 break;
                             }
                         }
@@ -375,23 +383,32 @@ public class DebugMenuGameOptions {
                         x,
                         1,
                         new ItemBuilder(team.item)
-                                .name(team.teamColor + team.name)
+                                .name(Component.text(team.name, team.teamColor))
                                 .get(),
                         (m, e) -> {
-                            SignGUI.open(player, new String[]{"", "^^^^^^^", "Enter new score", "Team: " + team.getName()}, (p, lines) -> {
-                                String line = lines[0];
-                                try {
-                                    int score = Integer.parseInt(line);
-                                    if (score < 0) {
-                                        throw new NumberFormatException();
-                                    }
-                                    game.setPoints(team, score);
-                                    sendDebugMessage(player, ChatColor.GREEN + "Set score of team " + team.getName() + " to " + score, true);
-                                } catch (NumberFormatException exception) {
-                                    p.sendMessage(ChatColor.RED + "Invalid score");
-                                }
-                                openTeamScoreEditorMenu(player, game);
-                            });
+                            new SignGUI()
+                                    .lines("", "^^^^^^^", "Enter new score", "Team: " + team.getName())
+                                    .onFinish((p, lines) -> {
+
+                                        new BukkitRunnable() {
+                                            @Override
+                                            public void run() {
+                                                String line = lines[0];
+                                                try {
+                                                    int score = Integer.parseInt(line);
+                                                    if (score < 0) {
+                                                        throw new NumberFormatException();
+                                                    }
+                                                    game.setPoints(team, score);
+                                                    sendDebugMessage(player, Component.text("Set score of team " + team.getName() + " to " + score, NamedTextColor.GREEN));
+                                                } catch (NumberFormatException exception) {
+                                                    p.sendMessage(Component.text("Invalid score", NamedTextColor.RED));
+                                                }
+                                                openTeamScoreEditorMenu(player, game);
+                                            }
+                                        }.runTaskLater(Warlords.getInstance(), 1);
+                                        return null;
+                                    }).open(player);
                         }
                 );
                 x++;
