@@ -7,7 +7,6 @@ import java.util.ArrayList;
 import java.util.Iterator;
 import java.util.List;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class PlayerStatisticsSecond implements Iterable<PlayerStatisticsSecond.Entry> {
@@ -49,21 +48,13 @@ public class PlayerStatisticsSecond implements Iterable<PlayerStatisticsSecond.E
         return events;
     }
 
-    public List<WarlordsDamageHealingFinalEvent> getEventsAsSelfFromLastSecond(int seconds) {
-        return entries
-                .subList(Math.max(0, entries.size() - seconds), entries.size())
-                .stream()
-                .flatMap(entry -> entry.getEventsAsSelf().stream())
-                .collect(Collectors.toList());
-    }
-
     public List<WarlordsDamageHealingFinalEvent> getEventsAsSelfFromLastSecond(int seconds, Predicate<WarlordsDamageHealingFinalEvent> filter) {
         return entries
                 .subList(Math.max(0, entries.size() - seconds), entries.size())
                 .stream()
                 .flatMap(entry -> entry.getEventsAsSelf().stream())
                 .filter(filter)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Stream<WarlordsDamageHealingFinalEvent> getEventsAsSelfFromLastSecondStream(int seconds) {
@@ -73,12 +64,8 @@ public class PlayerStatisticsSecond implements Iterable<PlayerStatisticsSecond.E
                 .flatMap(entry -> entry.getEventsAsSelf().stream());
     }
 
-    public List<WarlordsDamageHealingFinalEvent> getEventsAsAttackerFromLastSecond(int seconds) {
-        return entries
-                .subList(Math.max(0, entries.size() - seconds), entries.size())
-                .stream()
-                .flatMap(entry -> entry.getEventsAsAttacker().stream())
-                .collect(Collectors.toList());
+    public List<WarlordsDamageHealingFinalEvent> getLastEventsAsSelf(int amount) {
+        return getLastEventsAsSelf(amount, 60); //max last 60 seconds
     }
 
     public List<WarlordsDamageHealingFinalEvent> getLastEventsAsSelf(int amount, int timeLimitSeconds) {
@@ -86,12 +73,24 @@ public class PlayerStatisticsSecond implements Iterable<PlayerStatisticsSecond.E
         return events.subList(Math.max(0, events.size() - amount), events.size());
     }
 
-    public List<WarlordsDamageHealingFinalEvent> getLastEventsAsSelf(int amount) {
-        return getLastEventsAsSelf(amount, 60); //max last 60 seconds
+    public List<WarlordsDamageHealingFinalEvent> getEventsAsSelfFromLastSecond(int seconds) {
+        return entries
+                .subList(Math.max(0, entries.size() - seconds), entries.size())
+                .stream()
+                .flatMap(entry -> entry.getEventsAsSelf().stream())
+                .toList();
     }
 
     public WarlordsDamageHealingFinalEvent getLastEventAsSelf() {
-        return getLastEventsAsSelf(1, 60).get(0); //max last 60 seconds
+        List<WarlordsDamageHealingFinalEvent> events = getLastEventsAsSelf(1, 60);
+        if (events.isEmpty()) {
+            return null;
+        }
+        return events.get(0); //max last 60 seconds
+    }
+
+    public List<WarlordsDamageHealingFinalEvent> getLastEventsAsAttacker(int amount) {
+        return getLastEventsAsAttacker(amount, 60); //max last 60 seconds
     }
 
     public List<WarlordsDamageHealingFinalEvent> getLastEventsAsAttacker(int amount, int timeLimitSeconds) {
@@ -99,22 +98,30 @@ public class PlayerStatisticsSecond implements Iterable<PlayerStatisticsSecond.E
         return events.subList(Math.max(0, events.size() - amount), events.size());
     }
 
-    public List<WarlordsDamageHealingFinalEvent> getLastEventsAsAttacker(int amount, int timeLimitSeconds, Predicate<WarlordsDamageHealingFinalEvent> filter) {
-        List<WarlordsDamageHealingFinalEvent> events = getEventsAsAttackerFromLastSecond(timeLimitSeconds);
-        events = events.stream().filter(filter).collect(Collectors.toList());
-        return events.subList(Math.max(0, events.size() - amount), events.size());
-    }
-
-    public List<WarlordsDamageHealingFinalEvent> getLastEventsAsAttacker(int amount) {
-        return getLastEventsAsAttacker(amount, 60); //max last 60 seconds
+    public List<WarlordsDamageHealingFinalEvent> getEventsAsAttackerFromLastSecond(int seconds) {
+        return entries
+                .subList(Math.max(0, entries.size() - seconds), entries.size())
+                .stream()
+                .flatMap(entry -> entry.getEventsAsAttacker().stream())
+                .toList();
     }
 
     public List<WarlordsDamageHealingFinalEvent> getLastEventsAsAttacker(int amount, Predicate<WarlordsDamageHealingFinalEvent> filter) {
         return getLastEventsAsAttacker(amount, 60, filter); //max last 60 seconds
     }
 
+    public List<WarlordsDamageHealingFinalEvent> getLastEventsAsAttacker(int amount, int timeLimitSeconds, Predicate<WarlordsDamageHealingFinalEvent> filter) {
+        List<WarlordsDamageHealingFinalEvent> events = getEventsAsAttackerFromLastSecond(timeLimitSeconds);
+        events = events.stream().filter(filter).toList();
+        return events.subList(Math.max(0, events.size() - amount), events.size());
+    }
+
     public WarlordsDamageHealingFinalEvent getLastEventAsAttacker() {
-        return getLastEventsAsAttacker(1, 60).get(0); //max last 60 seconds
+        List<WarlordsDamageHealingFinalEvent> events = getLastEventsAsAttacker(1, 60);
+        if (events.isEmpty()) {
+            return null;
+        }
+        return events.get(0); //max last 60 seconds
     }
 
     @NotNull
