@@ -14,22 +14,23 @@ import com.ebicep.warlords.pve.Currencies;
 import com.ebicep.warlords.pve.Spendable;
 import com.ebicep.warlords.pve.rewards.types.CompensationReward;
 import com.ebicep.warlords.util.bukkit.Colors;
-import com.ebicep.warlords.util.bukkit.ComponentBuilder;
 import com.ebicep.warlords.util.bukkit.ItemBuilder;
-import com.ebicep.warlords.util.bukkit.signgui.SignGUI;
 import com.ebicep.warlords.util.chat.ChatChannels;
-import org.bukkit.ChatColor;
+import com.ebicep.warlords.util.chat.ChatUtils;
+import de.rapha149.signgui.SignGUI;
+import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.event.HoverEvent;
+import net.kyori.adventure.text.format.NamedTextColor;
+import net.kyori.adventure.text.format.TextDecoration;
 import org.bukkit.Material;
-import org.bukkit.SkullType;
 import org.bukkit.entity.Player;
-import org.bukkit.inventory.ItemFlag;
+import org.bukkit.scheduler.BukkitRunnable;
 
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.LinkedHashMap;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static com.ebicep.warlords.menu.Menu.ACTION_CLOSE_MENU;
 import static com.ebicep.warlords.menu.Menu.MENU_CLOSE;
@@ -40,7 +41,7 @@ public class CompensateCommand extends BaseCommand {
 
     public static void openCompensateMenu(Player player, LinkedHashMap<Spendable, Long> compensation, List<DatabasePlayer> compensatedPlayers) {
         if (compensatedPlayers == null || compensatedPlayers.isEmpty()) {
-            ChatChannels.sendDebugMessage(player, ChatColor.RED + "No players to compensate!", true);
+            ChatChannels.sendDebugMessage(player, Component.text("No players to compensate!", NamedTextColor.RED));
             return;
         }
         Menu menu = new Menu("Compensate", 9 * 6);
@@ -51,23 +52,30 @@ public class CompensateCommand extends BaseCommand {
             menu.setItem(col, row,
                     new ItemBuilder(currency.item)
                             .name(currency.getColoredName())
-                            .lore(ChatColor.GREEN.toString() + compensation.getOrDefault(currency, 0L))
-                            .flags(ItemFlag.HIDE_POTION_EFFECTS)
+                            .lore(Component.text(compensation.getOrDefault(currency, 0L), NamedTextColor.GREEN))
                             .get(),
                     (m, e) -> {
                         String[] text = new String[]{"", "", "", ""};
                         String[] currencyNameSplit = currency.name.split(" ");
                         System.arraycopy(currencyNameSplit, 0, text, 1, currencyNameSplit.length);
-                        SignGUI.open(player, text, (p, lines) -> {
-                            String amount = lines[0];
-                            try {
-                                int amountInt = Integer.parseInt(amount);
-                                compensation.put(currency, (long) amountInt);
-                            } catch (Exception exception) {
-                                p.sendMessage(ChatColor.RED + "Invalid Amount");
-                            }
-                            openCompensateMenu(p, compensation, compensatedPlayers);
-                        });
+                        new SignGUI()
+                                .lines(text)
+                                .onFinish((p, lines) -> {
+                                    String amount = lines[0];
+                                    try {
+                                        int amountInt = Integer.parseInt(amount);
+                                        compensation.put(currency, (long) amountInt);
+                                    } catch (Exception exception) {
+                                        p.sendMessage(Component.text("Invalid Amount", NamedTextColor.RED));
+                                    }
+                                    new BukkitRunnable() {
+                                        @Override
+                                        public void run() {
+                                            openCompensateMenu(p, compensation, compensatedPlayers);
+                                        }
+                                    }.runTaskLater(Warlords.getInstance(), 1);
+                                    return null;
+                                }).open(player);
                     }
             );
 
@@ -78,35 +86,38 @@ public class CompensateCommand extends BaseCommand {
         }
 
         menu.setItem(3, 5,
-                new ItemBuilder(Material.SKULL_ITEM, 1, (short) SkullType.PLAYER.ordinal())
-                        .name(ChatColor.GREEN + "Player")
-                        .lore(ChatColor.AQUA + (compensatedPlayers == null ? "Not Selected" :
-                                                compensatedPlayers.size() == 1 ? compensatedPlayers.get(0)
-                                                                                                   .getName() : "All " + compensatedPlayers.size() + " Players"))
+                new ItemBuilder(Material.PLAYER_HEAD)
+                        .name(Component.text("Player", NamedTextColor.GREEN))
+                        .lore(Component.text(compensatedPlayers.size() == 1 ?
+                                             compensatedPlayers.get(0).getName() :
+                                             "All " + compensatedPlayers.size() + " Players", NamedTextColor.AQUA))
                         .get(),
                 (m, e) -> {
-                    SignGUI.open(player, new String[]{"", "Enter", "Player", "Name"}, (p, lines) -> {
-                        String playerName = lines[0];
-                        for (DatabasePlayer databasePlayer : compensatedPlayers) {
-                            if (databasePlayer.getName().equalsIgnoreCase(playerName)) {
-                                openCompensateMenu(player, compensation, List.of(databasePlayer));
-                                return;
-                            }
-                        }
-                        ChatChannels.sendDebugMessage(player,
-                                ChatColor.AQUA + playerName + ChatColor.RED + " was not found for compensation",
-                                true
-                        );
-                    });
+                    new SignGUI()
+                            .lines("", "Enter", "Player", "Name")
+                            .onFinish((p, lines) -> {
+                                String playerName = lines[0];
+                                for (DatabasePlayer databasePlayer : compensatedPlayers) {
+                                    if (databasePlayer.getName().equalsIgnoreCase(playerName)) {
+                                        openCompensateMenu(player, compensation, List.of(databasePlayer));
+                                        return null;
+                                    }
+                                }
+                                ChatChannels.sendDebugMessage(player,
+                                        Component.text(playerName, NamedTextColor.AQUA).append(Component.text(" was not found for compensation", NamedTextColor.RED))
+                                );
+                                return null;
+                            }).open(player);
                 }
         );
         menu.setItem(4, 5, MENU_CLOSE, ACTION_CLOSE_MENU);
         menu.setItem(5, 5,
                 new ItemBuilder(Material.CHEST)
-                        .name(ChatColor.GREEN + "All Players")
+                        .name(Component.text("All Players", NamedTextColor.GREEN))
                         .lore(compensatedPlayers.stream()
-                                                .map(databasePlayer -> ChatColor.GRAY + " - " + ChatColor.AQUA + databasePlayer.getName())
-                                                .collect(Collectors.joining("\n")))
+                                                .map(databasePlayer -> Component.text(" - ", NamedTextColor.GRAY)
+                                                                                .append(Component.text(databasePlayer.getName(), NamedTextColor.AQUA)))
+                                                .collect(Component.toComponent(Component.empty())))
                         .get(),
                 (m, e) -> {
                     openCompensateMenu(player, compensation, new ArrayList<>(compensatedPlayers));
@@ -114,28 +125,42 @@ public class CompensateCommand extends BaseCommand {
         );
         menu.setItem(8, 5,
                 new ItemBuilder(Colors.GREEN.wool)
-                        .name(ChatColor.GREEN + "Confirm Compensate")
+                        .name(Component.text("Confirm Compensate", NamedTextColor.GREEN))
                         .lore(compensation.entrySet()
                                           .stream()
-                                          .map(currenciesValues -> ChatColor.GRAY + " - " + currenciesValues.getKey()
-                                                                                                            .getCostColoredName(currenciesValues.getValue()))
-                                          .toArray(String[]::new))
+                                          .map(currenciesValues -> Component.text(" - ", NamedTextColor.GRAY)
+                                                                            .append(currenciesValues.getKey().getCostColoredName(currenciesValues.getValue())))
+                                          .toArray(net.kyori.adventure.text.TextComponent[]::new))
                         .addLore(
-                                "",
-                                ChatColor.YELLOW.toString() + ChatColor.BOLD + "CLICK " + ChatColor.GREEN + "to directly give through the Rewards Inventory",
-                                ChatColor.YELLOW.toString() + ChatColor.BOLD + "SHIFT-CLICK " + ChatColor.GREEN + "to directly give rewards"
+                                Component.empty(),
+                                Component.textOfChildren(
+                                        Component.text("CLICK ", NamedTextColor.YELLOW, TextDecoration.BOLD),
+                                        Component.text("to directly give through the Rewards Inventory", NamedTextColor.GREEN)
+                                ),
+                                Component.textOfChildren(
+                                        Component.text("SHIFT-CLICK ", NamedTextColor.YELLOW, TextDecoration.BOLD),
+                                        Component.text("to directly give rewards", NamedTextColor.GREEN)
+                                )
                         )
                         .get(),
                 (m, e) -> {
                     if (!e.isShiftClick()) {
-                        SignGUI.open(player, new String[]{"", "Enter Reward", "Title", "Blank to Cancel"}, (p, lines) -> {
-                            String title = lines[0];
-                            if (title.isEmpty()) {
-                                ChatChannels.sendDebugMessage(player, ChatColor.RED + "Blank title, compensation cancelled", true);
-                                return;
-                            }
-                            compensate(player, compensation, compensatedPlayers, title);
-                        });
+                        new SignGUI()
+                                .lines("", "Enter Reward", "Title", "Blank to Cancel")
+                                .onFinish((p, lines) -> {
+                                    String title = lines[0];
+                                    if (title.isEmpty()) {
+                                        ChatChannels.sendDebugMessage(player, Component.text("Blank title, compensation cancelled", NamedTextColor.RED));
+                                        return null;
+                                    }
+                                    new BukkitRunnable() {
+                                        @Override
+                                        public void run() {
+                                            compensate(player, compensation, compensatedPlayers, title);
+                                        }
+                                    }.runTaskLater(Warlords.getInstance(), 1);
+                                    return null;
+                                }).open(player);
                     } else {
                         compensate(player, compensation, compensatedPlayers, null);
                     }
@@ -145,8 +170,8 @@ public class CompensateCommand extends BaseCommand {
     }
 
     public static void compensate(Player player, LinkedHashMap<Spendable, Long> compensation, List<DatabasePlayer> compensatedPlayers, String title) {
-        System.out.println(compensation);
-        System.out.println(compensatedPlayers);
+        ChatUtils.MessageType.WARLORDS.sendMessage(compensation.toString());
+        ChatUtils.MessageType.WARLORDS.sendMessage(compensatedPlayers.toString());
         if (compensatedPlayers.size() == 1) {
             Warlords.newChain()
                     .sync(() -> {
@@ -157,18 +182,18 @@ public class CompensateCommand extends BaseCommand {
                         } else {
                             pveStats.getCompensationRewards().add(new CompensationReward(compensation, title));
                         }
-                        ChatChannels.playerSpigotSendMessage(player, ChatChannels.DEBUG,
-                                new ComponentBuilder()
-                                        .appendHoverText(
-                                                ChatColor.GREEN + "Compensated " + ChatColor.AQUA + databasePlayer.getName() +
-                                                        ChatColor.GREEN + (title == null ? " directly" : " through the Rewards Inventory"),
-                                                compensation.entrySet()
-                                                            .stream()
-                                                            .map(currenciesValues -> ChatColor.GRAY + " - " + currenciesValues.getKey()
-                                                                                                                              .getCostColoredName(
-                                                                                                                                      currenciesValues.getValue()))
-                                                            .collect(Collectors.joining("\n"))
-                                        )
+                        ChatChannels.playerSendMessage(player,
+                                ChatChannels.DEBUG,
+                                Component.text("Compensated ", NamedTextColor.GREEN)
+                                         .append(Component.text(databasePlayer.getName(), NamedTextColor.AQUA))
+                                         .append(Component.text(title == null ? " directly" : " through the Rewards Inventory"))
+                                         .hoverEvent(HoverEvent.showText(
+                                                 compensation.entrySet()
+                                                             .stream()
+                                                             .map(currenciesValues ->
+                                                                     Component.text(" - ", NamedTextColor.GRAY)
+                                                                              .append(currenciesValues.getKey().getCostColoredName(currenciesValues.getValue())))
+                                                             .collect(Component.toComponent(Component.newline()))))
                         );
                         DatabaseManager.queueUpdatePlayerAsync(databasePlayer);
                         player.closeInventory();
@@ -187,9 +212,9 @@ public class CompensateCommand extends BaseCommand {
                             DatabaseManager.queueUpdatePlayerAsync(databasePlayer);
                         }
                         ChatChannels.sendDebugMessage(player,
-                                ChatColor.GREEN + "All " + ChatColor.AQUA + compensatedPlayers.size() + " players " +
-                                        ChatColor.GREEN + "were given compensation" + (title == null ? " directly" : " through the Rewards Inventory"),
-                                true
+                                Component.text("All ", NamedTextColor.GREEN)
+                                         .append(Component.text(compensatedPlayers.size() + " players ", NamedTextColor.AQUA))
+                                         .append(Component.text("were given compensation" + (title == null ? " directly" : " through the Rewards Inventory")))
                         );
                         player.closeInventory();
                     })
@@ -205,7 +230,7 @@ public class CompensateCommand extends BaseCommand {
                 .stream()
                 .filter(databasePlayer -> databasePlayer.getLastLogin() != null &&
                         databasePlayer.getLastLogin().isAfter(Instant.now().minus(30, ChronoUnit.DAYS)))
-                .collect(Collectors.toList());
+                .toList();
         openCompensateMenu(player, new LinkedHashMap<>(), databasePlayers);
     }
 
