@@ -7,9 +7,17 @@ import com.ebicep.warlords.menu.Menu;
 import com.ebicep.warlords.pve.Currencies;
 import com.ebicep.warlords.pve.weapons.WeaponsPvE;
 import com.ebicep.warlords.util.bukkit.ItemBuilder;
-import com.ebicep.warlords.util.bukkit.PacketUtils;
 import com.ebicep.warlords.util.java.NumberFormat;
-import org.bukkit.*;
+import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.TextComponent;
+import net.kyori.adventure.text.format.NamedTextColor;
+import net.kyori.adventure.text.format.TextDecoration;
+import net.kyori.adventure.title.Title;
+import net.kyori.adventure.util.Ticks;
+import org.bukkit.Bukkit;
+import org.bukkit.Material;
+import org.bukkit.OfflinePlayer;
+import org.bukkit.Sound;
 import org.bukkit.entity.Player;
 import org.bukkit.scheduler.BukkitRunnable;
 
@@ -24,10 +32,14 @@ public class SupplyDropManager {
 
     private static final ConcurrentHashMap<UUID, Boolean> PLAYER_ROLL_COOLDOWN = new ConcurrentHashMap<>();
 
-    public static void sendSupplyDropMessage(UUID uuid, String message) {
+    public static void sendSupplyDropMessage(UUID uuid, Component message) {
         OfflinePlayer offlinePlayer = Bukkit.getOfflinePlayer(uuid);
-        if (offlinePlayer != null && offlinePlayer.isOnline()) {
-            offlinePlayer.getPlayer().sendMessage(ChatColor.GOLD + "Supply Drop" + ChatColor.DARK_GRAY + " > " + message);
+        Player player = offlinePlayer.getPlayer();
+        if (player != null) {
+            player.sendMessage(Component.text("Supply Drop", NamedTextColor.GOLD)
+                                        .append(Component.text(" > ", NamedTextColor.DARK_GRAY))
+                                        .append(message)
+            );
         }
     }
 
@@ -41,19 +53,21 @@ public class SupplyDropManager {
                     4,
                     1,
                     new ItemBuilder(Material.GOLD_NUGGET)
-                            .name(ChatColor.GREEN + "Click to buy a supply drop token")
+                            .name(Component.text("Click to buy a supply drop token", NamedTextColor.GREEN))
                             .lore(
-                                    ChatColor.GREEN + "Cost: " + Currencies.COIN.getCostColoredName(10000),
-                                    ChatColor.GREEN + "Balance: " + ChatColor.YELLOW + NumberFormat.addCommas(databasePlayerPvE.getCurrencyValue(Currencies.COIN)) + " coins"
+                                    Component.text("Cost: ", NamedTextColor.GREEN).append(Currencies.COIN.getCostColoredName(10000)),
+                                    Component.text("Balance: ", NamedTextColor.GREEN).append(Component.
+                                            text(NumberFormat.addCommas(databasePlayerPvE.getCurrencyValue(Currencies.COIN)) + " coins", NamedTextColor.YELLOW)
+                                    )
                             )
                             .get(),
                     (m, e) -> {
                         if (databasePlayerPvE.getCurrencyValue(Currencies.COIN) < 10000) {
-                            player.sendMessage(ChatColor.RED + "You do not have enough coins to buy a supply drop token!");
+                            player.sendMessage(Component.text("You do not have enough coins to buy a supply drop token!", NamedTextColor.RED));
                             player.closeInventory();
                             return;
                         }
-                        player.playSound(player.getLocation(), Sound.NOTE_PLING, 1, 2);
+                        player.playSound(player.getLocation(), Sound.BLOCK_NOTE_BLOCK_PLING, 1, 2);
                         databasePlayerPvE.subtractCurrency(Currencies.COIN, 10000);
                         databasePlayerPvE.addCurrency(Currencies.SUPPLY_DROP_TOKEN, 1);
                         openSupplyDropMenu(player);
@@ -64,25 +78,28 @@ public class SupplyDropManager {
             menu.setItem(
                     2,
                     3,
-                    new ItemBuilder(Material.GOLD_BARDING)
-                            .name(ChatColor.GREEN + "Click to call a supply drop")
+                    new ItemBuilder(Material.GOLDEN_HORSE_ARMOR)
+                            .name(Component.text("Click to call a supply drop", NamedTextColor.GREEN))
                             .lore(
-                                    ChatColor.GRAY + "Cost: " + Currencies.SUPPLY_DROP_TOKEN.getCostColoredName(1),
-                                    ChatColor.GRAY + "Balance: " + Currencies.SUPPLY_DROP_TOKEN.getCostColoredName(tokens),
-                                    "",
-                                    ChatColor.YELLOW.toString() + ChatColor.BOLD + "SHIFT-CLICK" + ChatColor.GRAY + " to INSTANTLY call a supply drop"
+                                    Component.text("Cost: ", NamedTextColor.GRAY).append(Currencies.SUPPLY_DROP_TOKEN.getCostColoredName(1)),
+                                    Component.text("Balance: ", NamedTextColor.GRAY).append(Currencies.SUPPLY_DROP_TOKEN.getCostColoredName(tokens)),
+                                    Component.empty(),
+                                    Component.textOfChildren(
+                                            Component.text("SHIFT-CLICK", NamedTextColor.YELLOW, TextDecoration.BOLD),
+                                            Component.text(" to INSTANTLY call a supply drop", NamedTextColor.GRAY)
+                                    )
                             )
                             .get(),
                     (m, e) -> {
                         if (PLAYER_ROLL_COOLDOWN.getOrDefault(player.getUniqueId(), false)) {
-                            player.sendMessage(ChatColor.RED + "You must wait for your current roll to end to roll again!");
+                            player.sendMessage(Component.text("You must wait for your current roll to end to roll again!", NamedTextColor.RED));
                             return;
                         }
-                        player.playSound(player.getLocation(), Sound.NOTE_PLING, 1, 2);
+                        player.playSound(player.getLocation(), Sound.BLOCK_NOTE_BLOCK_PLING, 1, 2);
                         if (tokens > 0) {
                             supplyDropRoll(player, 1, e.isShiftClick());
                         } else {
-                            player.sendMessage(ChatColor.RED + "You do not have any supply drop tokens to call a supply drop.");
+                            player.sendMessage(Component.text("You do not have any supply drop tokens to call a supply drop.", NamedTextColor.RED));
                         }
                         player.closeInventory();
                     }
@@ -90,26 +107,29 @@ public class SupplyDropManager {
             menu.setItem(
                     6,
                     3,
-                    new ItemBuilder(Material.DIAMOND_BARDING)
-                            .name(ChatColor.GREEN + "Click to call all available supply drops (Max 25)")
+                    new ItemBuilder(Material.DIAMOND_HORSE_ARMOR)
+                            .name(Component.text("Click to call all available supply drops (Max 25)", NamedTextColor.GREEN))
                             .lore(
-                                    ChatColor.GRAY + "Cost: " + Currencies.SUPPLY_DROP_TOKEN.getCostColoredName(tokens),
-                                    ChatColor.GRAY + "Balance: " + Currencies.SUPPLY_DROP_TOKEN.getCostColoredName(tokens),
-                                    "",
-                                    ChatColor.GRAY + "NOTE: Max 25 at a time",
-                                    "",
-                                    ChatColor.YELLOW.toString() + ChatColor.BOLD + "SHIFT-CLICK" + ChatColor.GRAY + " to INSTANTLY call all available supply drops"
+                                    Component.text("Cost: ", NamedTextColor.GRAY).append(Currencies.SUPPLY_DROP_TOKEN.getCostColoredName(tokens)),
+                                    Component.text("Balance: ", NamedTextColor.GRAY).append(Currencies.SUPPLY_DROP_TOKEN.getCostColoredName(tokens)),
+                                    Component.empty(),
+                                    Component.text("NOTE: Max 25 at a time", NamedTextColor.GRAY),
+                                    Component.empty(),
+                                    Component.textOfChildren(
+                                            Component.text("SHIFT-CLICK", NamedTextColor.YELLOW, TextDecoration.BOLD),
+                                            Component.text(" to INSTANTLY call all available supply drops", NamedTextColor.GRAY)
+                                    )
                             )
                             .get(),
                     (m, e) -> {
                         if (PLAYER_ROLL_COOLDOWN.getOrDefault(player.getUniqueId(), false)) {
-                            player.sendMessage(ChatColor.RED + "You must wait for your current roll to end to roll again!");
+                            player.sendMessage(Component.text("You must wait for your current roll to end to roll again!", NamedTextColor.RED));
                             return;
                         }
                         if (tokens > 0) {
                             supplyDropRoll(player, Math.min(tokens, 25), e.isShiftClick());
                         } else {
-                            player.sendMessage(ChatColor.RED + "You do not have any supply drop tokens to call a supply drop.");
+                            player.sendMessage(Component.text("You do not have any supply drop tokens to call a supply drop.", NamedTextColor.RED));
                         }
                         player.closeInventory();
                     }
@@ -117,20 +137,22 @@ public class SupplyDropManager {
 
             //last 20 supply drops
             List<SupplyDropEntry> supplyDropEntries = databasePlayerPvE.getSupplyDropEntries();
-            List<String> supplyDropHistory = supplyDropEntries
+            List<TextComponent> supplyDropHistory = supplyDropEntries
                     .subList(Math.max(0, supplyDropEntries.size() - 20), supplyDropEntries.size())
                     .stream()
                     .map(SupplyDropEntry::getReward)
-                    .map(supplyDropRewards -> supplyDropRewards.getChatColor() + supplyDropRewards.name + "\n")
-                    .collect(Collectors.toList());
+                    .map(supplyDropRewards -> Component.text(supplyDropRewards.name, supplyDropRewards.getTextColor()))
+                    .toList();
             menu.setItem(
                     5,
                     5,
                     new ItemBuilder(Material.BOOK)
-                            .name(ChatColor.GREEN + "Your most recent supply drops")
+                            .name(Component.text("Your most recent supply drops", NamedTextColor.GREEN))
                             .lore(IntStream.range(0, supplyDropHistory.size())
-                                    .mapToObj(index -> ChatColor.GRAY.toString() + (index + 1) + ". " + supplyDropHistory.get(supplyDropHistory.size() - index - 1))
-                                    .collect(Collectors.toList()))
+                                           .mapToObj(index -> Component.text((index + 1) + ".", NamedTextColor.GRAY)
+                                                                       .append(supplyDropHistory.get(supplyDropHistory.size() - index - 1))
+                                           )
+                                           .collect(Collectors.toList()))
                             .get(),
                     (m, e) -> {
 
@@ -139,7 +161,7 @@ public class SupplyDropManager {
 
             menu.setItem(4, 5, Menu.MENU_CLOSE, Menu.ACTION_CLOSE_MENU);
             menu.openForPlayer(player);
-        }, () -> player.sendMessage(ChatColor.RED + "Susan does not want to talk to you right now."));
+        }, () -> player.sendMessage(Component.text("Susan does not want to talk to you right now.", NamedTextColor.RED)));
     }
 
     public static void supplyDropRoll(Player player, long amount, boolean instant) {
@@ -147,7 +169,9 @@ public class SupplyDropManager {
         DatabaseManager.getPlayer(uuid, databasePlayer -> {
             PLAYER_ROLL_COOLDOWN.put(uuid, true);
             sendSupplyDropMessage(uuid,
-                    ChatColor.GREEN + "Called " + ChatColor.YELLOW + amount + ChatColor.GREEN + " supply drop" + (amount > 1 ? "s" : "") + "!"
+                    Component.text("Called ", NamedTextColor.GREEN)
+                             .append(Component.text(amount, NamedTextColor.YELLOW))
+                             .append(Component.text(" supply drop" + (amount > 1 ? "s" : "") + "!", NamedTextColor.GREEN))
             );
             DatabasePlayerPvE databasePlayerPvE = databasePlayer.getPveStats();
             databasePlayerPvE.subtractCurrency(Currencies.SUPPLY_DROP_TOKEN, amount);
@@ -173,13 +197,12 @@ public class SupplyDropManager {
                     if (instant || counter % slowness == 0) {
                         reward = SupplyDropRewards.getRandomReward();
                         Random random = new Random();
-                        player.playSound(player.getLocation(), Sound.NOTE_STICKS, 1, random.nextFloat());
-                        PacketUtils.sendTitle(
-                                uuid,
-                                reward.getChatColor() + reward.name,
-                                "",
-                                0, 100, 0
-                        );
+                        player.playSound(player.getLocation(), Sound.BLOCK_NOTE_BLOCK_HAT, 1, random.nextFloat());
+                        player.showTitle(Title.title(
+                                Component.text(reward.name, reward.getTextColor()),
+                                Component.empty(),
+                                Title.Times.times(Ticks.duration(0), Ticks.duration(100), Ticks.duration(0))
+                        ));
                     }
 
                     counter++;
@@ -195,9 +218,12 @@ public class SupplyDropManager {
                             if (reward.rarity == WeaponsPvE.EPIC) {
                                 for (Player onlinePlayer : Bukkit.getOnlinePlayers()) {
                                     sendSupplyDropMessage(onlinePlayer.getUniqueId(),
-                                            ChatColor.AQUA + player.getName() +
-                                                    ChatColor.GRAY + " got lucky and received " + reward.getChatColor() + reward.name +
-                                                    ChatColor.GRAY + " from the supply drop!"
+                                            Component.text().color(NamedTextColor.GRAY)
+                                                     .append(Component.text(player.getName(), NamedTextColor.AQUA))
+                                                     .append(Component.text(" got lucky and received "))
+                                                     .append(Component.text(reward.name, reward.getTextColor()))
+                                                     .append(Component.text(" from the supply drop!"))
+                                                     .build()
                                     );
                                 }
                             }
