@@ -1,7 +1,6 @@
 package com.ebicep.warlords.pve.mobs.events.pharaohsrevenge;
 
 import com.ebicep.warlords.effects.EffectUtils;
-import com.ebicep.warlords.effects.ParticleEffect;
 import com.ebicep.warlords.events.player.ingame.WarlordsAddVelocityEvent;
 import com.ebicep.warlords.events.player.ingame.WarlordsDamageHealingEvent;
 import com.ebicep.warlords.game.option.pve.PveOption;
@@ -19,17 +18,17 @@ import com.ebicep.warlords.util.warlords.PlayerFilterGeneric;
 import com.ebicep.warlords.util.warlords.Utils;
 import org.bukkit.Location;
 import org.bukkit.Material;
+import org.bukkit.Particle;
 import org.bukkit.Sound;
 import org.bukkit.event.EventHandler;
 import org.bukkit.event.Listener;
 
 import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class EventDjer extends AbstractZombie implements BossMob {
 
-    private final int earthQuakeRadius = 12; //TODO
+    private final int earthQuakeRadius = 12;
     private final HashSet<String> skillsImmuneTo = new HashSet<>() {{
         add("Seismic Wave");
         add("Ground Slam");
@@ -107,26 +106,25 @@ public class EventDjer extends AbstractZombie implements BossMob {
         Location loc = warlordsNPC.getLocation();
 
         if (ticksElapsed % 100 == 0) {
-            Utils.playGlobalSound(loc, Sound.ENDERDRAGON_GROWL, 2, 0.4f); //TODO animations
+            Utils.playGlobalSound(loc, Sound.ENTITY_ENDER_DRAGON_GROWL, 2, 0.4f);
             EffectUtils.strikeLightning(loc, false);
-            EffectUtils.playSphereAnimation(loc, earthQuakeRadius, ParticleEffect.SPELL_WITCH, 2);
-            EffectUtils.playHelixAnimation(loc, earthQuakeRadius, ParticleEffect.FIREWORKS_SPARK, 2, 40);
+            EffectUtils.playSphereAnimation(loc, earthQuakeRadius, Particle.SPELL_WITCH, 2);
+            EffectUtils.playHelixAnimation(loc, earthQuakeRadius, Particle.FIREWORKS_SPARK, 2, 40);
             List<WarlordsPlayer> warlordsPlayers = PlayerFilterGeneric
                     .entitiesAround(warlordsNPC, earthQuakeRadius, earthQuakeRadius, earthQuakeRadius)
                     .aliveEnemiesOf(warlordsNPC)
                     .warlordsPlayers()
                     .stream()
-                    .collect(Collectors.toList());
+                    .toList();
             for (WarlordsPlayer warlordsPlayer : warlordsPlayers) {
                 Utils.addKnockback(name, loc, warlordsPlayer, -2.5, 0.25);
                 warlordsPlayer.addDamageInstance(
                         warlordsNPC,
-                        "Ground Shred", //TODO
+                        "Ground Shred",
                         920,
                         1080,
                         0,
-                        100,
-                        false
+                        100
                 );
             }
             new GameRunnable(option.getGame()) {
