@@ -1,27 +1,30 @@
 package com.ebicep.warlords.pve.upgrades;
 
-import com.ebicep.warlords.abilties.internal.AbstractAbility;
+import com.ebicep.warlords.abilities.internal.AbstractAbility;
 import com.ebicep.warlords.database.DatabaseManager;
+import com.ebicep.warlords.database.repositories.player.pojos.general.DatabasePlayer;
 import com.ebicep.warlords.events.player.ingame.pve.WarlordsUpgradeUnlockEvent;
 import com.ebicep.warlords.game.Game;
 import com.ebicep.warlords.game.option.RecordTimeElapsedOption;
 import com.ebicep.warlords.menu.Menu;
+import com.ebicep.warlords.player.general.Settings;
 import com.ebicep.warlords.player.ingame.WarlordsPlayer;
-import com.ebicep.warlords.util.bukkit.ComponentBuilder;
 import com.ebicep.warlords.util.bukkit.ItemBuilder;
 import com.ebicep.warlords.util.warlords.Utils;
-import net.md_5.bungee.api.ChatColor;
+import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.event.HoverEvent;
+import net.kyori.adventure.text.format.NamedTextColor;
+import net.kyori.adventure.text.format.TextDecoration;
+import net.kyori.adventure.text.serializer.plain.PlainTextComponentSerializer;
 import org.bukkit.Bukkit;
 import org.bukkit.Material;
 import org.bukkit.Sound;
 import org.bukkit.enchantments.Enchantment;
 import org.bukkit.entity.Player;
-import org.bukkit.inventory.ItemFlag;
 import org.bukkit.inventory.ItemStack;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static com.ebicep.warlords.menu.Menu.*;
 
@@ -34,7 +37,24 @@ public abstract class AbstractUpgradeBranch<T extends AbstractAbility> {
 
     protected List<Upgrade> treeA = new ArrayList<>();
     protected List<Upgrade> treeB = new ArrayList<>();
-    protected Upgrade masterUpgrade;
+    protected Upgrade masterUpgrade = new Upgrade(
+            "Name Placeholder",
+            "Subname Placeholder",
+            "Description Placeholder",
+            999999999,
+            () -> {
+
+            }
+    );
+    protected Upgrade masterUpgrade2 = new Upgrade(
+            "Name Placeholder",
+            "Subname Placeholder",
+            "Description Placeholder",
+            999999999,
+            () -> {
+
+            }
+    );
 
     private int maxUpgrades = 6;
     private int upgradesRequiredForMaster = 6;
@@ -59,16 +79,28 @@ public abstract class AbstractUpgradeBranch<T extends AbstractAbility> {
                 masterBranchItem(masterUpgrade),
                 (m, e) -> {
                     if (e.isLeftClick()) {
-                        purchaseMasterUpgrade(player, false);
+                        purchaseMasterUpgrade(player, masterUpgrade, false);
                     } else if (!masterUpgrade.isUnlocked()) {
                         onAutoUpgrade(AutoUpgradeProfile.AutoUpgradeEntry.UpgradeType.MASTER, 0);
                     }
                 }
         );
+//        menu.setItem(
+//                6,
+//                0,
+//                masterBranchItem(masterUpgrade2),
+//                (m, e) -> {
+//                    if (e.isLeftClick()) {
+//                        purchaseMasterUpgrade(player, masterUpgrade2, false);
+//                    } else if (!masterUpgrade2.isUnlocked()) {
+//                        onAutoUpgrade(AutoUpgradeProfile.AutoUpgradeEntry.UpgradeType.MASTER2, 0);
+//                    }
+//                }
+//        );
 
         menu.setItem(4, 3,
                 new ItemBuilder(Material.DIAMOND)
-                        .name(ChatColor.GRAY + "Upgrades Remaining: " + ChatColor.GREEN + maxUpgrades)
+                        .name(Component.text("Upgrades Remaining: ", NamedTextColor.GRAY).append(Component.text(maxUpgrades, NamedTextColor.GREEN)))
                         .get(),
                 ACTION_DO_NOTHING
         );
@@ -80,32 +112,41 @@ public abstract class AbstractUpgradeBranch<T extends AbstractAbility> {
         }
     }
 
-    public void purchaseMasterUpgrade(WarlordsPlayer player, boolean autoUpgraded) {
+    public void purchaseMasterUpgrade(WarlordsPlayer player, Upgrade upgrade, boolean autoUpgraded) {
+        if (masterUpgrade.equals(upgrade) && masterUpgrade2.isUnlocked() ||
+                masterUpgrade2.equals(upgrade) && masterUpgrade.isUnlocked()
+        ) {
+            player.sendMessage(Component.text("You already unlocked a master upgrade for this ability.", NamedTextColor.RED));
+            return;
+        }
         if (player.getAbilityTree().getMaxMasterUpgrades() <= 0) {
-            player.sendMessage(ChatColor.RED + "You cannot unlock this master upgrade, maximum master upgrades reached.");
+            player.sendMessage(Component.text("You cannot unlock this master upgrade, maximum master upgrades reached.", NamedTextColor.RED));
             return;
         }
-        if (player.getCurrency() < masterUpgrade.getCurrencyCost()) {
-            player.sendMessage(ChatColor.RED + "You do not have enough Insignia (❂) to buy this upgrade!");
+        if (player.getCurrency() < upgrade.getCurrencyCost()) {
+            player.sendMessage(Component.text("You do not have enough Insignia (❂) to buy this upgrade!", NamedTextColor.RED));
             return;
         }
-        if (masterUpgrade.isUnlocked()) {
-            player.sendMessage(ChatColor.RED + "You already unlocked this upgrade.");
+        if (upgrade.isUnlocked()) {
+            player.sendMessage(Component.text("You already unlocked this upgrade.", NamedTextColor.RED));
             return;
         }
 
         if (upgradesRequiredForMaster <= 0) {
-            masterUpgrade.getOnUpgrade().run();
-            masterUpgrade.setUnlocked(true);
+            upgrade.getOnUpgrade().run();
+            upgrade.setUnlocked(true);
+            ability.setPveMasterUpgrade(true);
 
             player.getAbilityTree().setMaxMasterUpgrades(abilityTree.getMaxMasterUpgrades() - 1);
-            player.subtractCurrency(masterUpgrade.getCurrencyCost());
-            Utils.playGlobalSound(player.getLocation(), Sound.ENDERDRAGON_GROWL, 500f, 0.8f);
+            player.subtractCurrency(upgrade.getCurrencyCost());
+            Utils.playGlobalSound(player.getLocation(), Sound.ENTITY_ENDER_DRAGON_GROWL, 500f, 0.8f);
 
-            globalAnnouncement(player.getGame(), masterUpgrade, ability, autoUpgraded);
+            globalAnnouncement(player.getGame(), upgrade, ability, autoUpgraded);
         } else {
             String s = upgradesRequiredForMaster == 1 ? "" : "s";
-            player.sendMessage(ChatColor.RED + "You need to unlock " + upgradesRequiredForMaster + " more upgrade" + s + " before unlocking the master upgrade!");
+            player.sendMessage(Component.text("You need to unlock " + upgradesRequiredForMaster + " more upgrade" + s + " before unlocking the master upgrade!",
+                    NamedTextColor.RED
+            ));
             return;
         }
 
@@ -116,8 +157,8 @@ public abstract class AbstractUpgradeBranch<T extends AbstractAbility> {
 
         abilityTree.getUpgradeLog().add(new AbilityTree.UpgradeLog(
                         RecordTimeElapsedOption.getTicksElapsed(player.getGame()),
-                        masterUpgrade.getName(),
-                        masterUpgrade.getDescription()
+                        upgrade.getName(),
+                        PlainTextComponentSerializer.plainText().serialize(upgrade.getDescription().stream().collect(Component.toComponent(Component.newline())))
                 )
         );
     }
@@ -146,7 +187,7 @@ public abstract class AbstractUpgradeBranch<T extends AbstractAbility> {
                 openUpgradeBranchMenu();
             } else {
                 //error message
-                player.sendMessage(ChatColor.RED + "You can only remove the last upgrade in the auto upgrade queue.");
+                player.sendMessage(Component.text("You can only remove the last upgrade in the auto upgrade queue.", NamedTextColor.RED));
             }
         } else {
             //checks
@@ -154,25 +195,41 @@ public abstract class AbstractUpgradeBranch<T extends AbstractAbility> {
                     .getAutoUpgradeEntries()
                     .stream()
                     .filter(autoUpgradeEntry -> autoUpgradeEntry.getUpgradeType() != AutoUpgradeProfile.AutoUpgradeEntry.UpgradeType.MASTER &&
+                            autoUpgradeEntry.getUpgradeType() != AutoUpgradeProfile.AutoUpgradeEntry.UpgradeType.MASTER2 &&
                             autoUpgradeEntry.getBranchIndex() == branchIndex &&
                             !autoUpgradeEntry.getUpgradeType().getUpgradeFunction.apply(this).get(autoUpgradeEntry.getUpgradeIndex()).isUnlocked()
                     )
-                    .collect(Collectors.toList());
+                    .toList();
             int branchUpgradesInQueue = branchEntries.size();
-            if (upgradeType == AutoUpgradeProfile.AutoUpgradeEntry.UpgradeType.MASTER) {
+            if (upgradeType == AutoUpgradeProfile.AutoUpgradeEntry.UpgradeType.MASTER || upgradeType == AutoUpgradeProfile.AutoUpgradeEntry.UpgradeType.MASTER2) {
+                if (upgradeType == AutoUpgradeProfile.AutoUpgradeEntry.UpgradeType.MASTER && autoUpgradeProfile.getAutoUpgradeEntries()
+                                                                                                               .stream()
+                                                                                                               .filter(entry -> entry.getBranchIndex() == branchIndex)
+                                                                                                               .anyMatch(entry -> entry.getUpgradeType() == AutoUpgradeProfile.AutoUpgradeEntry.UpgradeType.MASTER2) ||
+                        upgradeType == AutoUpgradeProfile.AutoUpgradeEntry.UpgradeType.MASTER2 && autoUpgradeProfile.getAutoUpgradeEntries()
+                                                                                                                    .stream()
+                                                                                                                    .filter(entry -> entry.getBranchIndex() == branchIndex)
+                                                                                                                    .anyMatch(entry -> entry.getUpgradeType() == AutoUpgradeProfile.AutoUpgradeEntry.UpgradeType.MASTER)
+                ) {
+                    player.sendMessage(Component.text("You cannot queue this master upgrade, you already unlocked a master upgrade for this ability.", NamedTextColor.RED));
+                    return;
+                }
                 int masterUpgradesInQueue = (int) autoUpgradeProfile
                         .getAutoUpgradeEntries()
                         .stream()
                         .filter(autoUpgradeEntry -> autoUpgradeEntry.getUpgradeType() == AutoUpgradeProfile.AutoUpgradeEntry.UpgradeType.MASTER &&
                                 !abilityTree.getUpgradeBranches().get(autoUpgradeEntry.getBranchIndex()).getMasterUpgrade().isUnlocked()
                         )
+                        .filter(autoUpgradeEntry -> autoUpgradeEntry.getUpgradeType() == AutoUpgradeProfile.AutoUpgradeEntry.UpgradeType.MASTER2 &&
+                                !abilityTree.getUpgradeBranches().get(autoUpgradeEntry.getBranchIndex()).getMasterUpgrade2().isUnlocked()
+                        )
                         .count();
                 if (masterUpgradesInQueue >= player.getAbilityTree().getMaxMasterUpgrades()) {
-                    player.sendMessage(ChatColor.RED + "You cannot queue this master upgrade, maximum master upgrades reached.");
+                    player.sendMessage(Component.text("You cannot queue this master upgrade, maximum master upgrades reached.", NamedTextColor.RED));
                     return;
                 }
                 if (upgradesRequiredForMaster - branchUpgradesInQueue > 0) {
-                    player.sendMessage(ChatColor.RED + "You cannot queue this master upgrade, you need to unlock or queue all upgrades first.");
+                    player.sendMessage(Component.text("You cannot queue this master upgrade, you need to unlock or queue all upgrades first.", NamedTextColor.RED));
                     return;
                 }
             } else {
@@ -181,12 +238,12 @@ public abstract class AbstractUpgradeBranch<T extends AbstractAbility> {
                             branchEntries.stream().noneMatch(autoUpgradeEntry -> autoUpgradeEntry.getUpgradeType() == upgradeType &&
                                     autoUpgradeEntry.getUpgradeIndex() == upgradeIndex - 1)
                     ) {
-                        player.sendMessage(ChatColor.RED + "You need to unlock or queue the previous upgrade first!");
+                        player.sendMessage(Component.text("You need to unlock or queue the previous upgrade first!", NamedTextColor.RED));
                         return;
                     }
                 }
                 if (branchUpgradesInQueue >= maxUpgrades) {
-                    player.sendMessage(ChatColor.RED + "You cannot queue this upgrade, maximum upgrades for this ability reached.");
+                    player.sendMessage(Component.text("You cannot queue this upgrade, maximum upgrades for this ability reached.", NamedTextColor.RED));
                     return;
                 }
             }
@@ -228,22 +285,22 @@ public abstract class AbstractUpgradeBranch<T extends AbstractAbility> {
 
     public void purchaseUpgrade(List<Upgrade> tree, WarlordsPlayer player, Upgrade upgrade, int upgradeIndex, boolean autoUpgraded) {
         if (upgrade.isUnlocked()) {
-            player.sendMessage(ChatColor.RED + "You already unlocked this upgrade.");
+            player.sendMessage(Component.text("You already unlocked this upgrade.", NamedTextColor.RED));
             return;
         }
         if (upgradeIndex != 0) {
             if (!tree.get(upgradeIndex - 1).isUnlocked()) {
-                player.sendMessage(ChatColor.RED + "You need to unlock the previous upgrade first!");
+                player.sendMessage(Component.text("You need to unlock the previous upgrade first!", NamedTextColor.RED));
                 return;
             }
         }
 
         if (player.getCurrency() < upgrade.getCurrencyCost() && freeUpgrades <= 0) {
-            player.sendMessage(ChatColor.RED + "You do not have enough Insignia (❂) to buy this upgrade!");
+            player.sendMessage(Component.text("You do not have enough Insignia (❂) to buy this upgrade!", NamedTextColor.RED));
             return;
         }
         if (maxUpgrades <= 0) {
-            player.sendMessage(ChatColor.RED + "You cannot unlock this upgrade, maximum upgrades reached.");
+            player.sendMessage(Component.text("You cannot unlock this upgrade, maximum upgrades reached.", NamedTextColor.RED));
             return;
         }
 
@@ -257,7 +314,7 @@ public abstract class AbstractUpgradeBranch<T extends AbstractAbility> {
         } else {
             player.subtractCurrency(upgrade.getCurrencyCost());
         }
-        player.playSound(player.getLocation(), Sound.LEVEL_UP, 500, 1.3f);
+        player.playSound(player.getLocation(), Sound.ENTITY_PLAYER_LEVELUP, 500, 1.3f);
 
         Bukkit.getPluginManager().callEvent(new WarlordsUpgradeUnlockEvent(player, upgrade));
         globalAnnouncement(player.getGame(), upgrade, ability, autoUpgraded);
@@ -269,36 +326,47 @@ public abstract class AbstractUpgradeBranch<T extends AbstractAbility> {
         abilityTree.getUpgradeLog().add(new AbilityTree.UpgradeLog(
                         RecordTimeElapsedOption.getTicksElapsed(player.getGame()),
                         upgrade.getName(),
-                        upgrade.getDescription()
+                PlainTextComponentSerializer.plainText().serialize(upgrade.getDescription().stream().collect(Component.toComponent(Component.newline())))
                 )
         );
     }
 
     private ItemStack masterBranchItem(Upgrade upgrade) {
-        ArrayList<String> lore = new ArrayList<>();
+        List<Component> lore = new ArrayList<>();
         if (upgrade.getSubName() != null) {
-            lore.add((upgrade.isUnlocked() ? ChatColor.RED : ChatColor.DARK_GRAY) + upgrade.getSubName());
-            lore.add("");
+            lore.add(Component.text(upgrade.getSubName(), upgrade.isUnlocked() ? NamedTextColor.RED : NamedTextColor.DARK_GRAY));
+            lore.add(Component.empty());
         }
-        lore.add((upgrade.isUnlocked() ? ChatColor.GREEN : ChatColor.GRAY) + upgrade.getDescription() +
-                "\n\n" + ChatColor.GRAY + "Cost: " + ChatColor.GOLD + "❂ " + upgrade.getCurrencyCost());
-        ItemBuilder itemBuilder = new ItemBuilder(masterUpgrade.isUnlocked() ? new ItemStack(Material.WOOL, 1, (short) 1) : new ItemStack(Material.WOOL))
-                .name(ChatColor.GOLD + ChatColor.BOLD.toString() + masterUpgrade.getName())
+        for (Component component : upgrade.getDescription()) {
+            lore.add(component.color(upgrade.isUnlocked() ? NamedTextColor.RED : NamedTextColor.DARK_GRAY));
+        }
+        lore.add(Component.empty());
+        lore.add(Component.empty());
+        lore.add(Component.text("Cost: ", NamedTextColor.GRAY)
+                          .append(Component.text("❂ " + upgrade.getCurrencyCost(), NamedTextColor.GOLD))
+        );
+        ItemBuilder itemBuilder = new ItemBuilder(upgrade.isUnlocked() ? new ItemStack(Material.ORANGE_WOOL) : new ItemStack(Material.WHITE_WOOL))
+                .name(Component.text(upgrade.getName(), NamedTextColor.GOLD, TextDecoration.BOLD))
                 .lore(lore);
         if (!upgrade.isUnlocked()) {
-            String position = abilityTree.getAutoUpgradeProfile().getPosition(abilityTree, upgrade);
+            Component position = abilityTree.getAutoUpgradeProfile().getPosition(abilityTree, upgrade);
             if (position != null) {
                 itemBuilder.addLore(
-                        ChatColor.GRAY + "Auto Upgrade Position: " + position,
-                        "",
-                        ChatColor.YELLOW.toString() + ChatColor.BOLD + "RIGHT-CLICK" + ChatColor.GRAY + " to remove from auto upgrade queue."
+                        Component.text("Auto Upgrade Position: ", NamedTextColor.GRAY).append(position),
+                        Component.empty(),
+                        Component.textOfChildren(
+                                Component.text("RIGHT-CLICK ", NamedTextColor.YELLOW, TextDecoration.BOLD),
+                                Component.text(" to remove from auto upgrade queue.", NamedTextColor.GRAY)
+                        )
                 );
                 itemBuilder.enchant(Enchantment.OXYGEN, 1);
-                itemBuilder.flags(ItemFlag.HIDE_ENCHANTS);
             } else {
                 itemBuilder.addLore(
-                        "",
-                        ChatColor.YELLOW.toString() + ChatColor.BOLD + "RIGHT-CLICK" + ChatColor.GRAY + " to add to auto upgrade queue."
+                        Component.empty(),
+                        Component.textOfChildren(
+                                Component.text("RIGHT-CLICK ", NamedTextColor.YELLOW, TextDecoration.BOLD),
+                                Component.text(" to add to auto upgrade queue.", NamedTextColor.GRAY)
+                        )
                 );
             }
         }
@@ -306,26 +374,36 @@ public abstract class AbstractUpgradeBranch<T extends AbstractAbility> {
     }
 
     private ItemStack branchItem(Upgrade upgrade) {
-        ItemBuilder itemBuilder = new ItemBuilder(upgrade.isUnlocked() ?
-                                                  new ItemStack(Material.WOOL, 1, (short) 1) :
-                                                  new ItemStack(Material.WOOL, 1, (short) 8))
-                .name((upgrade.isUnlocked() ? ChatColor.GOLD : ChatColor.RED) + upgrade.getName())
-                .lore((upgrade.isUnlocked() ? ChatColor.GREEN : ChatColor.GRAY) + upgrade.getDescription() +
-                        "\n\n" + ChatColor.GRAY + "Cost: " + ChatColor.GOLD + "❂ " + upgrade.getCurrencyCost());
+        ItemBuilder itemBuilder = new ItemBuilder(upgrade.isUnlocked() ? new ItemStack(Material.ORANGE_WOOL) : new ItemStack(Material.LIGHT_GRAY_WOOL))
+                .name(Component.text(upgrade.getName(), upgrade.isUnlocked() ? NamedTextColor.GOLD : NamedTextColor.RED));
+        List<Component> lore = new ArrayList<>();
+        for (Component component : upgrade.getDescription()) {
+            lore.add(component.color(upgrade.isUnlocked() ? NamedTextColor.RED : NamedTextColor.DARK_GRAY));
+        }
+        lore.add(Component.empty());
+        lore.add(Component.text("Cost: ", NamedTextColor.GRAY)
+                          .append(Component.text("❂ " + upgrade.getCurrencyCost(), NamedTextColor.GOLD))
+        );
+        itemBuilder.lore(lore);
         if (!upgrade.isUnlocked()) {
-            String position = abilityTree.getAutoUpgradeProfile().getPosition(abilityTree, upgrade);
+            Component position = abilityTree.getAutoUpgradeProfile().getPosition(abilityTree, upgrade);
             if (position != null) {
                 itemBuilder.addLore(
-                        ChatColor.GRAY + "Auto Upgrade Position: " + position,
-                        "",
-                        ChatColor.YELLOW.toString() + ChatColor.BOLD + "RIGHT-CLICK" + ChatColor.GRAY + " to remove from auto upgrade queue."
+                        Component.text("Auto Upgrade Position: ", NamedTextColor.GRAY).append(position),
+                        Component.empty(),
+                        Component.textOfChildren(
+                                Component.text("RIGHT-CLICK ", NamedTextColor.YELLOW, TextDecoration.BOLD),
+                                Component.text(" to remove from auto upgrade queue.", NamedTextColor.GRAY)
+                        )
                 );
                 itemBuilder.enchant(Enchantment.OXYGEN, 1);
-                itemBuilder.flags(ItemFlag.HIDE_ENCHANTS);
             } else {
                 itemBuilder.addLore(
-                        "",
-                        ChatColor.YELLOW.toString() + ChatColor.BOLD + "RIGHT-CLICK" + ChatColor.GRAY + " to add to auto upgrade queue."
+                        Component.empty(),
+                        Component.textOfChildren(
+                                Component.text("RIGHT-CLICK ", NamedTextColor.YELLOW, TextDecoration.BOLD),
+                                Component.text(" to add to auto upgrade queue.", NamedTextColor.GRAY)
+                        )
                 );
             }
         }
@@ -333,26 +411,39 @@ public abstract class AbstractUpgradeBranch<T extends AbstractAbility> {
     }
 
     private void globalAnnouncement(Game game, Upgrade upgrade, T ability, boolean autoUpgraded) {
-        String prefix = autoUpgraded ? AutoUpgradeProfile.AUTO_UPGRADE_PREFIX : "";
+        Component prefix = autoUpgraded ? AutoUpgradeProfile.AUTO_UPGRADE_PREFIX : Component.empty();
         game.forEachOnlinePlayer((p, t) -> {
-            if (upgrade.getName().equals("Master Upgrade") || (upgrade.getSubName() != null && upgrade.getSubName().contains("Master Upgrade"))) {
-                p.spigot().sendMessage(new ComponentBuilder(prefix + ChatColor.AQUA + abilityTree.getWarlordsPlayer().getName() + " §ehas unlocked ")
-                        .appendHoverItem(ChatColor.GOLD + ability.getName() + " - §c§l" + upgrade.getName() + "§e!",
-                                new ItemBuilder(Material.STONE)
-                                        .name("§c§l" + upgrade.getName())
-                                        .lore(ChatColor.GREEN + upgrade.getDescription())
-                                        .get()
-                        )
-                        .create());
+            DatabasePlayer databasePlayer = DatabaseManager.getPlayer(p.getUniqueId(), true);
+            if (databasePlayer.getChatUpgradeMode() != Settings.ChatSettings.ChatUpgrade.ALL) {
+                return;
+            }
+            if (upgrade.equals(masterUpgrade) || upgrade.equals(masterUpgrade2)) {
+                p.sendMessage(Component.textOfChildren(
+                        prefix,
+                        Component.text(abilityTree.getWarlordsPlayer().getName(), NamedTextColor.AQUA),
+                        Component.text(" has unlocked ", NamedTextColor.YELLOW),
+                        Component.textOfChildren(
+                                Component.text(ability.getName() + " - ", NamedTextColor.GOLD),
+                                Component.text(upgrade.getName(), NamedTextColor.RED, TextDecoration.BOLD),
+                                Component.text("!", NamedTextColor.GOLD)
+                        ).hoverEvent(HoverEvent.showText(Component.textOfChildren(
+                                Component.text(upgrade.getName(), NamedTextColor.RED, TextDecoration.BOLD),
+                                Component.newline(),
+                                upgrade.getDescription(NamedTextColor.GREEN).stream().collect(Component.toComponent(Component.newline()))
+                        )))
+                ));
             } else {
-                p.spigot().sendMessage(new ComponentBuilder(prefix + ChatColor.AQUA + abilityTree.getWarlordsPlayer().getName() + " §ehas unlocked ")
-                        .appendHoverItem(ChatColor.GOLD + ability.getName() + " - " + upgrade.getName() + "§e!",
-                                new ItemBuilder(Material.STONE)
-                                        .name(ChatColor.GOLD + upgrade.getName())
-                                        .lore(ChatColor.GREEN + upgrade.getDescription())
-                                        .get()
-                        )
-                        .create());
+                p.sendMessage(Component.textOfChildren(
+                        prefix,
+                        Component.text(abilityTree.getWarlordsPlayer().getName(), NamedTextColor.AQUA),
+                        Component.text(" has unlocked ", NamedTextColor.YELLOW),
+                        Component.text(ability.getName() + " - " + upgrade.getName() + "!", NamedTextColor.GOLD)
+                                 .hoverEvent(HoverEvent.showText(Component.textOfChildren(
+                                         Component.text(upgrade.getName(), NamedTextColor.GOLD),
+                                         Component.newline(),
+                                         upgrade.getDescription(NamedTextColor.GREEN).stream().collect(Component.toComponent(Component.newline()))
+                                 )))
+                ));
             }
         });
     }
@@ -400,5 +491,9 @@ public abstract class AbstractUpgradeBranch<T extends AbstractAbility> {
 
     public Upgrade getMasterUpgrade() {
         return masterUpgrade;
+    }
+
+    public Upgrade getMasterUpgrade2() {
+        return masterUpgrade2;
     }
 }
